added greek lang update svn & props

--- a/locale/messages_cs.properties
+++ b/locale/messages_cs.properties
@@ -49,6 +49,7 @@ tmm.contact=Kontaktujte nás
 tmm.donate=Dar autorovi.
 tmm.searchfield=Hledání ...
 tmm.errorlogs=Ukaž chybový log
+tmm.messages=Zobraz historii zpráv
 tmm.wakeonlandevice=Zařízení Wake on LAN
 tmm.wakeonlan=Wake on LAN
 tmm.version=Verze
@@ -131,10 +132,12 @@ movie.findmissing=Najdi chybějící filmy.
 movie.assignmovieset=Najdi sady pro vybrané filmy
 movie.assignmovieset.desc=<html>Přiřaď vybrané filmy do sad<br />Tato funkce je dostupná pouze pro dárce</html>
 movie.setwatchedflag=Natav příznak shlédnuto pro vybraný film(y)
-movie.synctrakt=Synchronizuj sbírku filmů s Trakt.tv
-movie.synctrakt.desc=Synchronizuj sbírku filmů s Trakt.tv
-movie.synctraktwatched=Synchronizuj příznak shlédnutí s Trakt.tv
-movie.synctraktwatched.desc=Synchronizuj příznak shlédnutí s Trakt.tv
+movie.synctrakt=Trakt.tv - Synchronizuj celou 'sbírku'
+movie.synctrakt.desc=Přidej všechny svoje filmy do své Trakt.tv sbírky  a synchronizuj  'datum přidání'.
+movie.synctraktwatched=Trakt.tv - Synchronizuj celkově stav  'shlédnuto' 
+movie.synctraktwatched.desc=Synchronizujl celkově  'shlédnuto'  podle Trakt.tv.
+movie.synctrakt.selected=Trakt.tv - Synchronizuj vybraný film(y) - podle 'přidáno' a 'shlédnuto'
+movie.synctrakt.selected.desc=Synchronizace pouze vybraného filmu(ů) podle kolekce+shlédnuto  s Trakt.tv
 
 movie.export=Exportuj označené filmy
 
@@ -268,7 +271,6 @@ Settings.externaldevices=Externí zařízení
 Settings.externalservices=Externí služby
 Settings.filetypes=Typy souborů
 Settings.trakttv=Trakt.tv
-Settings.trakttv.apikey=Trakt.tv API key
 
 # general settings
 Settings.proxy=Nastavení proxy
@@ -350,6 +352,7 @@ Settings.multipleMovies=Dovolit více filmů na adresář
 Settings.multipleMovies.hint=POZOR\: tato volba dovolí importovat několik filmů z jednoho adresáře.\nPokud ji zvolíte nebude možno vybrat specifické pojmenování souborů nebo použít  extrafanart/extrathumbs.\nPOUŽITÍ VÍCE FILMU NA ADRESÁŘ NENÍ DOPORUČENO\!
 Settings.nfoFormat=NFO formát
 Settings.nofFileNaming=Pojmenování souboru NFO
+Settings.nfo.discstyle=<html>VIDEO_TS / VIDEO_TS.nfo<br />BDMV / index.bdmv</html>
 Settings.videofiletypes=Typy video souborů
 Settings.extrafiletypes=Typy titulků a přídavných souborů
 Settings.audiofiletypes=Typy audio souborů
@@ -456,10 +459,12 @@ tvshow.renamer.tvshowfolder=Přejmenuj složku seriálů
 tvshow.renamer.tvshowfolder.year=Přidej rok k názvu složky seriálů
 tvshow.updatemediainfo=Aktualizovat informace o mediu pro vybraný Seriál(y)/Epizodu(y)
 tvshow.export=Exportuj vybraný seriál(y)
-tvshow.synctrakt=Synchronizuj sbírku seriálů s Trakt.tv
-tvshow.synctrakt.desc=Synchronizuj sbírku seriálů s Trakt.tv
-tvshow.synctraktwatched=Synchronizuj příznak shlédnutí s Trakt.tv
-tvshow.synctraktwatched.desc=Synchronizuj příznak shlédnutí s Trakt.tv
+tvshow.synctrakt=Trakt.tv - Synchronizuj kompletní 'sbírku'
+tvshow.synctrakt.desc=Přidej všechny svoje seriály do  Trakt.tv sbírky, a synchronuzuj podle 'datum přidání'.
+tvshow.synctraktwatched=Trakt.tv - Synchronizuj příznak  'shlédnutí' kompletně
+tvshow.synctraktwatched.desc=Synchronizuj 'shlédnuto' podle Trakt.tv
+tvshow.synctrakt.selected=Trakt.tv -  Synchronizace vybraného seriálu(ů) - 'přidáno' a 'shlédnuto'
+tvshow.synctrakt.selected.desc=Synchronizace pouze vybraného seriálu(ů) podle kolekce+shlédnuto s Trakt.tv
 tvshow.changetodvdorder=Změň řazení vybraných epizod(y) na řazení dle DVD
 tvshow.changefromdvdorder=Změň řazení vybraných epizod(y) na řazení dle premiery
 tvshow.changeorder.desc=Toto by mělo být použito po importu, před skrapováním
@@ -513,6 +518,7 @@ metatag.guests=Hosté
 metatag.images=Obrázky
 metatag.imdb=IMDB Id
 metatag.internal=interní
+metatag.language=Jazyk
 metatag.mediafiletype=Typ
 metatag.minutes=min
 metatag.movie=Film
@@ -555,6 +561,7 @@ metatag.trailer=Trailer
 metatag.url=Url
 metatag.video=Video
 metatag.videocodec=Video kodek
+metatag.videobitrate=Video bitrate
 metatag.watched=Shlédnuto
 metatag.writer=Autor
 metatag.year=Rok
