--- a/locale/messages_de.properties
+++ b/locale/messages_de.properties
@@ -49,6 +49,7 @@ tmm.contact=Kontaktiere uns
 tmm.donate=Spenden
 tmm.searchfield=Suchen...
 tmm.errorlogs=Zeige Fehlerbericht
+tmm.messages=Zeige letze Benachrichtigungen
 tmm.wakeonlandevice=Wake on LAN Gerät
 tmm.wakeonlan=Wake-on-LAN
 tmm.version=Version
@@ -131,10 +132,12 @@ movie.findmissing=Finde fehlende Filme
 movie.assignmovieset=Finde Filmsets für ausgewählte Filme
 movie.assignmovieset.desc=<html>Weise selektierte Filme ihrem Filmset zu<br />Diese Funktion ist unseren Spendern vorbehalten</html>
 movie.setwatchedflag=Markiere ausgewählte Film(e) als "gesehen"
-movie.synctrakt=Film Bibliothek mit Trakt.tv synchronisieren
-movie.synctrakt.desc=Film Bibliothek mit Trakt.tv synchronisieren
-movie.synctraktwatched="Gesehen"-Status mit Trakt.tv synchronisieren
-movie.synctraktwatched.desc="Gesehen"-Status mit Trakt.tv synchronisieren
+movie.synctrakt=Trakt.tv - Synchronisiere komplette Sammlung
+movie.synctrakt.desc=Fügt alle Filme zu Deiner Trakt.tv Sammlung hinzu, und synchronisiert das "hinzugefügt am" Datum.
+movie.synctraktwatched=Trakt.tv - Synchronisiere "gesehen" Status aller Filme
+movie.synctraktwatched.desc=Synchronisiert den "gesehen" Status aller Filme
+movie.synctrakt.selected=Trakt.tv - Synchronisiere nur ausgewählte Film(e) - Sammlung und 'gesehen' Status
+movie.synctrakt.selected.desc=Synchronisiert nur die ausgewählten Film(e). Sammlung und 'gesehen' Status.
 
 movie.export=Exportiere Filmliste(n) von selektierten Filmen
 
@@ -194,7 +197,7 @@ image.choose.file=Wähle eine Datei
 image.choose.fanart=Wähle Fanart
 image.choose.poster=Wähle Poster
 image.choose.banner=Wähle ein Banner
-image.choose.season=Wähle Saison Poster
+image.choose.season=Wähle Staffel Poster
 image.choose.logo=Wähle Logo
 image.choose.clearart=Wähle Clearart
 image.choose.thumb=Wähle Thumb
@@ -268,7 +271,6 @@ Settings.externaldevices=Externe Geräte
 Settings.externalservices=Externe Dienste
 Settings.filetypes=Dateitypen
 Settings.trakttv=Trakt.tv
-Settings.trakttv.apikey=Trakt.tv API Schlüssel
 
 # general settings
 Settings.proxy=Proxy Einstellungen
@@ -297,10 +299,10 @@ Settings.trakt.clearmovies=Entferne alle Filme aus Trakt.tv
 Settings.trakt.clearmovies.hint=ACHTUNG\: Es werden alle Filme und 'gesehen' Status aus Deinem online Trakt.tv Profil entfernt. Weitermachen?
 Settings.trakt.cleartvshows=Entferne alle TV Serien aus Trakt.tv
 Settings.trakt.cleartvshows.hint=ACHTUNG\: Es werden alle TV Serien und 'gesehen' Status aus Deinem online Trakt.tv Profil entfernt. Weitermachen?
-# Settings.misc=Misc. settings
-# Settings.memoryborder=Memory settings
-# Settings.memory=Max. memory
-# Settings.memory.hint=Increase this value if you get OutOfMemoryError (Java heap space) or if you've got a large database and tinyMediaManager is running slow.\r\nBe aware\: this amount of memory has to be free whenever tinyMediaManager starts. Default 512MB\r\nChanging this value needs a restart of tinyMediaManager to take effect
+Settings.misc=Verschiedene Einstellungen
+Settings.memoryborder=Speicher Einstellungen
+Settings.memory=Max. Speicher
+Settings.memory.hint=Wenn OutOfMemoryError Fehler (Java heap size) auftreten oder die Datenbank sehr groß ist und tinyMediaManager langsam läuft, sollte dieser Wert erhöht werden.\nVorsicht\: die angegebene Menge an Speicher muß frei zur Verfügung stehen, wenn tinyMediaManager startet; der Standardwert beträgt 512MB.\nEine Änderung des Werts erfordert einen Neustart von tinyMediaManager um aktiv zu werden.
 
 # image settings
 Settings.poster=Poster und Fanart
@@ -350,6 +352,7 @@ Settings.multipleMovies=erlaube mehrere Filme in einem Verzeichnis
 Settings.multipleMovies.hint=ACHTUNG\: diese Option erlaubt Dir, mehrere Filme in einem Verzeichnis zu importieren.\nDiese Option bringt allerdings einige Nachteile mit sich\: \nDu kannst keine Namenskonvention bei diesen Filmen verwenden,\nund Extrafanarts/Thums/Artworks funktionieren dafür auch nicht.\nMEHRERE FILME IN EINEM VERZEICHNIS WIRD GENERELL NICHT EMPFOHLEN\!
 Settings.nfoFormat=NFO Format
 Settings.nofFileNaming=NFO Dateiname
+Settings.nfo.discstyle=<html>VIDEO_TS / VIDEO_TS.nfo<br />BDMV / index.bdmv</html>
 Settings.videofiletypes=Film Dateierweiterungen
 Settings.extrafiletypes=Untertitel Dateierweiterungen
 Settings.audiofiletypes=Audio Dateitypen
@@ -393,7 +396,7 @@ Settings.movie.renamer.$M=Filmset Name (Suchtitel)
 Settings.movie.renamer.$N=Filmset Name
 Settings.movie.renamer.$I=IMDB Nummer
 Settings.movie.renamer.$C=Altersbeschränkung
-# Settings.movie.renamer.$G=First genre
+Settings.movie.renamer.$G=Erstes Gerne
 Settings.movie.renamer.$L=Sprache
 Settings.movie.renamer.$R=Video Auflösung
 Settings.movie.renamer.$A=Audio Codec + Kanäle
@@ -402,19 +405,19 @@ Settings.movie.renamer.$F=Video Format
 Settings.movie.renamer.$S=Medienherkunft (DVD etc)
 Settings.movie.renamer.$3=3D Tag (3D SBS/TAB)
 
-# Settings.tvshow.renamer.title=Renamer pattern and options
+Settings.tvshow.renamer.title=Muster und Optionen für die Umbenennung
 
 Settings.tvshow.renamer.$N=TV Serien name
-# Settings.tvshow.renamer.$Y=Year
-# Settings.tvshow.renamer.$T=Episode title
-# Settings.tvshow.renamer.$F=Video format
-# Settings.tvshow.renamer.$1=Season number
-# Settings.tvshow.renamer.$2=Season number with at least 2 digits
-# Settings.tvshow.renamer.$E=Episode number
-# Settings.tvshow.renamer.$R=Video resolution
-# Settings.tvshow.renamer.$A=audio code + channels
-# Settings.tvshow.renamer.$V=video code + format
-# Settings.tvshow.renamer.$F=Video format
+Settings.tvshow.renamer.$Y=Jahr
+Settings.tvshow.renamer.$T=Episoden-Titel
+Settings.tvshow.renamer.$F=Video Format
+Settings.tvshow.renamer.$1=Staffelnummer
+Settings.tvshow.renamer.$2=Staffelnummer mit mind. 2 Stellen
+Settings.tvshow.renamer.$E=Episoden-Nummer
+Settings.tvshow.renamer.$R=Videoauflösung
+Settings.tvshow.renamer.$A=Audio Codec + Kanäle
+Settings.tvshow.renamer.$V=Video Codec + Format
+Settings.tvshow.renamer.$F=Video Format
 
 
 # tv show settings
@@ -425,7 +428,7 @@ Settings.dvdorder=Importierte Episoden sind in DVD Reihenfolge
 
 Settings.tvshowfoldername=TV Serien Ordnername
 Settings.tvshowseasonfoldername=Staffel Ordnername
-# Settings.tvshowfilename=Episode file name
+Settings.tvshowfilename=Episoden-Dateiname
 Settings.tvshowspacereplacement.hint=Leerzeichen im Titel ersetzen durch
 Settings.tvshow.certifactioncountry.hint=Hinweis\: Momentan unterstützt kein Scraper anderssprachige Altersbeschränkungen.\nTVDB führt nur US Altersbeschränkungen,\nund AniDB gar keine.
 
@@ -442,27 +445,29 @@ tvshow.remove=Ausgewählte TV Serie(n) / Episode(n) entfernen
 tvshow.delete=Ausgewählte TV Serien/Episoden löschen (DB)
 tvshow.delete.hint=Ausgewählte TV Serien/Episoden löschen (DB + Dateien)
 tvshow.delete.desc=Ausgewählte TV Serien aus der DB und vom Filesystem löschen?\nDie Dateien werden zuerst in ein Verzeichnis ".deletedByTMM" verschoben und erst beim Beenden gelöscht.
-tvshow.changeseasonposter=Ändere Saison Poster von ausgewählten Saison(en)
+tvshow.changeseasonposter=Ändere Staffel Poster von ausgewählten Staffeln
 tvshow.change=Wechsle TV Serie
 tvshow.bulkedit=Mehrfach bearbeiten
-tvshow.bulkedit.desc=Genres, Tags, Saison und 'Gesehen' Markierung von ausgewählten TV Serien ändern
-tvshow.scrapeepisodeseasondata=Saison & Episoden Metadaten scrapen
+tvshow.bulkedit.desc=Genres, Tags, Staffel und 'Gesehen' Markierung von ausgewählten TV Serien ändern
+tvshow.scrapeepisodeseasondata=Staffel & Episoden Metadaten scrapen
 tvshow.update=ausgewählte TV Serien(s) aktualisieren
 tvshow.rewritenfo=NFO für ausgewählte TV Serien neu schreiben
 tvshow.rename=Umbenennen / Cleanup ausgewählter TV Serien / Episoden
 tvshow.clearimagecache=Den Bildercache für ausgewählte TV Serien/Episoden löschen
-tvshow.renamer.failedrename=Konnte Episode {} nicht umbenennen. Ungültige Saison- und/oder Episodennummer.
+tvshow.renamer.failedrename=Konnte Episode {} nicht umbenennen. Ungültige Staffel- und/oder Episodennummer.
 tvshow.renamer.tvshowfolder=TV Serien Ordner umbenennen
 tvshow.renamer.tvshowfolder.year=Das Jahr zum Ordnername hinzufügen
 tvshow.updatemediainfo=Medianinformationen aus ausgewählten TV Serien/Episoden neu einlesen
 tvshow.export=ausgewählte TV Serien exportieren
-tvshow.synctrakt=TV Serie Bibliothek mit Trakt.tv synchronisieren
-tvshow.synctrakt.desc=TV Serie Bibliothek mit Trakt.tv synchronisieren
-tvshow.synctraktwatched="Gesehen"-Status mit Trakt.tv synchronisieren
-tvshow.synctraktwatched.desc="Gesehen"-Status mit Trakt.tv synchronisieren
-# tvshow.changetodvdorder=Change selected episode(s) to DVD order
-# tvshow.changefromdvdorder=Change selected episode(s) to aired order
-# tvshow.changeorder.desc=This should be used after import, before you scrape
+tvshow.synctrakt=Trakt.tv - Synchronisiere komplette TV Sammlung
+tvshow.synctrakt.desc=Fügt alle TV Shows zu Deiner Trakt.tv Sammlung hinzu, und synchronisiert das "hinzugefügt am" Datum.
+tvshow.synctraktwatched=Trakt.tv - Synchronisiere "gesehen" Status aller Shows
+tvshow.synctraktwatched.desc=Synchronisiert den "gesehen" Status aller TV Shows und Episoden
+tvshow.synctrakt.selected=Trakt.tv - Synchronisiere nur ausgewählte TV Show(s) - Sammlung und 'gesehen' Status
+tvshow.synctrakt.selected.desc=Synchronisiert nur die ausgewählten TV Show(s). Sammlung und 'gesehen' Status.
+tvshow.changetodvdorder=Gewählte Episode(n) in Reihenfolge der DVD bringen
+tvshow.changefromdvdorder=Gewählte Episode(n) in Reihenfolge der Ausstrahlung bringen
+tvshow.changeorder.desc=Dies sollte nach dem Import verwendet werden, vor dem scrapen
 
 tvshowepisode.scrape=Scrape Episoden Metadaten
 tvshowepisode.scrape.withoutartwork=Scrape Episoden Metadaten (ohne Bilder)
@@ -498,9 +503,9 @@ metatag.dateadded=hinzugefügt am
 metatag.details=Detail
 metatag.details2=Detail 2
 metatag.director=Regie
-# metatag.dvdepisode=DVD episode
-# metatag.dvdorder=DVD ordering
-# metatag.dvdseason=DVD season
+metatag.dvdepisode=DVD Episode
+metatag.dvdorder=DVD Reihenfolge
+metatag.dvdseason=DVD Staffel
 metatag.episode=Episode
 metatag.episodes=Episoden
 metatag.external=Extern
@@ -513,6 +518,7 @@ metatag.guests=Gastauftritt
 metatag.images=Bilder
 metatag.imdb=IMDB Id
 metatag.internal=Intern
+metatag.language=Sprache
 metatag.mediafiletype=Typ
 metatag.minutes=min
 metatag.movie=Film
@@ -532,8 +538,8 @@ metatag.releasedate=Erscheinungsdatum
 metatag.resolution=Auflösung
 metatag.role=Rolle
 metatag.runtime=Laufzeit
-metatag.season=Saison
-metatag.seasons=Saison
+metatag.season=Staffel
+metatag.seasons=Staffel
 metatag.size=Größe
 metatag.sorttitle=Sortierungstitel
 metatag.source=Herkunft
@@ -555,6 +561,7 @@ metatag.trailer=Film Trailer
 metatag.url=Url
 metatag.video=Video
 metatag.videocodec=Video codec
+metatag.videobitrate=Video Bitrate
 metatag.watched=bereits angesehen
 metatag.writer=Drehbuch
 metatag.year=Jahr
@@ -582,7 +589,7 @@ mediafiletype.extrathumb=Extrathumb
 mediafiletype.graphic=Grafik
 mediafiletype.movie=Film
 mediafiletype.episode=Episode
-mediafiletype.season_poster=Saison Poster
+mediafiletype.season_poster=Staffel Poster
 mediafiletype.sample=Sample
 
 chooser.nothingfound=nichts gefunden
