--- a/locale/messages_fr.properties
+++ b/locale/messages_fr.properties
@@ -49,6 +49,7 @@ tmm.contact=Nous contacter
 tmm.donate=Faire un don
 tmm.searchfield=Recherche...
 tmm.errorlogs=Montrer les journaux d'erreurs
+tmm.messages=Montrer l'historique des messages
 tmm.wakeonlandevice=Réveiller un appareil connecté au réseau (WoL)
 tmm.wakeonlan=Wake on LAN (activation via le réseau)
 tmm.version=Version
@@ -131,10 +132,12 @@ movie.findmissing=Trouver les films manquants
 movie.assignmovieset=Trouver sagas pour les films sélectionné(s).
 movie.assignmovieset.desc=<html>Affecter les films sélectionnés à leurs saga<br />Cette fonctionnalité est réservée à nos donateurs</html>
 movie.setwatchedflag=Activer l'étiquette "déjà vu" pour les films suivant(s)
-movie.synctrakt=Synchroniser la bibliothèque de films avec Trakt.tv
-movie.synctrakt.desc=Synchroniser la bibliothèque de films avec Trakt.tv
-movie.synctraktwatched=Synchroniser les états "Déjà Vu" avec Trakt.tv
+movie.synctrakt=Trakt.tv - Tout synchroniser
+movie.synctrakt.desc=Ajoute tous vos films à votre collection Trakt.tv et synchronise la "date d'ajout".
+movie.synctraktwatched=Trakt.tv - Synchroniser l'état "vu"
 movie.synctraktwatched.desc=Synchroniser les états "Déjà Vu" avec Trakt.tv
+# movie.synctrakt.selected=Trakt.tv - Synchronize selected movie(s) - 'collected' and 'watched'
+# movie.synctrakt.selected.desc=Syncs only the selected movie(s) with Trakt.tv. Collection and watched state.
 
 movie.export=Exporter le(s) film(s) sélectionné(s)
 
@@ -268,7 +271,6 @@ Settings.externaldevices=Matériels Externes
 Settings.externalservices=Services Externes
 Settings.filetypes=Types de fichiers
 Settings.trakttv=Trakt.tv
-Settings.trakttv.apikey=Trakt.tv Clef API
 
 # general settings
 Settings.proxy=Paramètres du proxy
@@ -297,10 +299,10 @@ Settings.trakt.clearmovies=Enlever les films de Trakt.tv
 Settings.trakt.clearmovies.hint=ATTENTION\: Ceci va effacer tous vos films et leur état de votre profil Trakt.tv.\nContinuer ?
 Settings.trakt.cleartvshows=Enlever les Séries de Trakt.tv
 Settings.trakt.cleartvshows.hint=ATTENTION\: Ceci va effacer toutes vos séries et leur état de votre profil Trakt.tv.\nContinuer ?
-# Settings.misc=Misc. settings
-# Settings.memoryborder=Memory settings
-# Settings.memory=Max. memory
-# Settings.memory.hint=Increase this value if you get OutOfMemoryError (Java heap space) or if you've got a large database and tinyMediaManager is running slow.\r\nBe aware\: this amount of memory has to be free whenever tinyMediaManager starts. Default 512MB\r\nChanging this value needs a restart of tinyMediaManager to take effect
+Settings.misc=Paramètres divers
+Settings.memoryborder=Paramètres mémoire
+Settings.memory=Mémoire maximum
+Settings.memory.hint=Augmentez cette valeur si vous obtenez OutOfMemoryError (Java heap space) ou si vous avez une grande base de données et tinyMediaManager est lent.\nAttention\: cette quantité de mémoire doit être libre lorsque tinyMediaManager commence. 512 Mo par défaut\nUn redémarrage de tinyMediaManager est nécessaire pour que la modification de cette valeur prenne effet.
 
 # image settings
 Settings.poster=Affiche et Illustrations
@@ -340,7 +342,7 @@ Settings.scraperfallback=Utiliser d'autres sources de données (Scraper) quand n
 
 # movie settings
 Settings.movie.datasource=Sources des données
-Settings.movie.datasource.remove.info=Si vous enlever %s de vos sources, tous les films correspondant à ce chemin seront enlevés de la base de donnés. Voulez-vous continuer ?
+Settings.movie.datasource.remove.info=Si vous enlevez %s de vos sources, tous les films correspondant à ce chemin seront enlevés de la base de données. Voulez-vous continuer ?
 Settings.movie.visiblecolumns=Colonnes visibles
 
 Settings.datasource.folderchooser=Ajouter une source de données
@@ -350,6 +352,7 @@ Settings.multipleMovies=Autoriser plusieurs films par répertoire
 Settings.multipleMovies.hint=Attention \: cette option vous autorisera à importer plusieurs films par dossier.\nActiver cette option induira les effets secondaires suivants \: vous ne serez plus en mesure de \:\nChoisir votre propre renommage de fichier ou utiliser des fanarts et miniatures supplémentaires.\nSTOCKER PLUSIEURS FILMS PAR RÉPERTOIRE EST FORTEMENT DÉCONSEILLÉ\!\n
 Settings.nfoFormat=NFO format
 Settings.nofFileNaming=NFO file naming
+# Settings.nfo.discstyle=<html>VIDEO_TS / VIDEO_TS.nfo<br />BDMV / index.bdmv</html>
 Settings.videofiletypes=Types de fichiers vidéos
 Settings.extrafiletypes=Types de fichiers pour les sous-titres et autres fichiers
 Settings.audiofiletypes=Types de fichier Audio
@@ -393,7 +396,7 @@ Settings.movie.renamer.$M=Titre de la saga (triée par titre)
 Settings.movie.renamer.$N=Titre de la saga
 Settings.movie.renamer.$I=référence IMDB
 Settings.movie.renamer.$C=Certification
-# Settings.movie.renamer.$G=First genre
+Settings.movie.renamer.$G=Premier genre
 Settings.movie.renamer.$L=Langue
 Settings.movie.renamer.$R=Format vidéo
 Settings.movie.renamer.$A=Codec audio + canaux
@@ -456,10 +459,12 @@ tvshow.renamer.tvshowfolder=Renommer le dossier de la Série TV
 tvshow.renamer.tvshowfolder.year=Ajouter l'année au répertoire de la série TV
 tvshow.updatemediainfo=Mettre à jour les informations médias des épisodes TV sélectionnés
 tvshow.export=Exporter les série(s) TV sélectionnées
-tvshow.synctrakt=Synchroniser la bibliothèque de séries avec Trakt.tv
-tvshow.synctrakt.desc=Synchroniser la bibliothèque de séries avec Trakt.tv
-tvshow.synctraktwatched=Synchroniser les états "Déjà Vu" avec Trakt.tv
-tvshow.synctraktwatched.desc=Synchroniser les états "Déjà Vu" avec Trakt.tv
+# tvshow.synctrakt=Trakt.tv - Synchronize complete 'collection'
+tvshow.synctrakt.desc=Ajoute toutes vos séries TV à votre collection Trakt.tv et synchronise la "date d'ajout".
+# tvshow.synctraktwatched=Trakt.tv - Synchronize complete 'watched' state
+# tvshow.synctraktwatched.desc=Syncs all 'watched' states from Trakt.tv.
+# tvshow.synctrakt.selected=Trakt.tv - Synchronize selected TV show(s) - 'collected' and 'watched'
+# tvshow.synctrakt.selected.desc=Syncs only the selected TV show(s) with Trakt.tv. Collection and watched state.
 tvshow.changetodvdorder=Mettre l'(es) épidode(s) sélectionné(s) dans l'ordre du DVD
 tvshow.changefromdvdorder=Mettre l'(es) épisode(s) dans l'ordre de diffusion
 tvshow.changeorder.desc=Cela doit être utilisé après l'importation, après le scrape
@@ -513,6 +518,7 @@ metatag.guests=Invités
 metatag.images=Images
 metatag.imdb=ID IMDB
 metatag.internal=interne
+metatag.language=Langue
 metatag.mediafiletype=Type
 metatag.minutes=mn(s)
 metatag.movie=Film
@@ -555,6 +561,7 @@ metatag.trailer=Bande annonce
 metatag.url=Url
 metatag.video=Vidéo
 metatag.videocodec=Codec vidéo
+metatag.videobitrate=Bitrate vidéo
 metatag.watched=Vu
 metatag.writer=Scénariste
 metatag.year=Année
