--- a/locale/messages_hu.properties
+++ b/locale/messages_hu.properties
@@ -49,6 +49,7 @@ tmm.contact=Kapcsolat
 tmm.donate=Adomány
 tmm.searchfield=Keresés...
 tmm.errorlogs=Hibanapló mutatása
+# tmm.messages=Show message history
 tmm.wakeonlandevice=Wake on LAN eszköz
 tmm.wakeonlan=Wake on LAN
 tmm.version=Verzió
@@ -131,10 +132,12 @@ movie.bulkedit.desc=Műfajok, tag-ek, összeállítások és megnézettség megv
 # movie.assignmovieset=Find movie sets for selected movie(s)
 # movie.assignmovieset.desc=<html>Assign selected movie(s) to their movie sets<br />This feature is restricted to our donators</html>
 # movie.setwatchedflag=Set the watched flag for selected movie(s)
-# movie.synctrakt=Synchronize the movie collection with Trakt.tv
-# movie.synctrakt.desc=Synchronize the movie collection with Trakt.tv
-# movie.synctraktwatched=Synchronize the watched state with Trakt.tv
-# movie.synctraktwatched.desc=Synchronize the watched state with Trakt.tv
+# movie.synctrakt=Trakt.tv - Synchronize complete 'collection'
+# movie.synctrakt.desc=Adds all your local movies to your Trakt.tv collection, and syncs the 'date added'.
+# movie.synctraktwatched=Trakt.tv - Synchronize complete 'watched' state
+# movie.synctraktwatched.desc=Syncs all 'watched' states from Trakt.tv.
+# movie.synctrakt.selected=Trakt.tv - Synchronize selected movie(s) - 'collected' and 'watched'
+# movie.synctrakt.selected.desc=Syncs only the selected movie(s) with Trakt.tv. Collection and watched state.
 
 movie.export=A kiválasztott film(ek) exportálása
 
@@ -268,7 +271,6 @@ Settings.general=Általános
 # Settings.externalservices=External services
 # Settings.filetypes=File types
 # Settings.trakttv=Trakt.tv
-# Settings.trakttv.apikey=Trakt.tv API key
 
 # general settings
 Settings.proxy=Proxy beállítások
@@ -350,6 +352,7 @@ Settings.datasource.remove=Adatforrás eltávolítása
 # Settings.multipleMovies.hint=BE AWARE\: this option will allow you to import multiple movies per folder.\nEnabling this will cause some side effects\: you are no longer be able to\nchoose any specific file naming or use extrafanart/extrathumbs.\nUSING MULTIPLE MOVIES PER FOLDER IS NOT RECOMMENDED\!
 Settings.nfoFormat=NFO formátum
 Settings.nofFileNaming=NFO fájl elnevezés
+# Settings.nfo.discstyle=<html>VIDEO_TS / VIDEO_TS.nfo<br />BDMV / index.bdmv</html>
 Settings.videofiletypes=Videó fájltípusok
 Settings.extrafiletypes=Felirat és további fájltípusok
 Settings.audiofiletypes=Hang fájltípusok
@@ -456,10 +459,12 @@ tvshow.scrapeepisodeseasondata=Évad és epizód adatok letöltése
 # tvshow.renamer.tvshowfolder.year=Add year to the TV show folder
 # tvshow.updatemediainfo=Update media information of selected TV shows(s)/episodes(s)
 # tvshow.export=Export selected TV show(s)
-# tvshow.synctrakt=Synchronize the TV show collection with Trakt.tv
-# tvshow.synctrakt.desc=Synchronize the TV show collection with Trakt.tv
-# tvshow.synctraktwatched=Synchronize the watched state with Trakt.tv
-# tvshow.synctraktwatched.desc=Synchronize the watched state with Trakt.tv
+# tvshow.synctrakt=Trakt.tv - Synchronize complete 'collection'
+# tvshow.synctrakt.desc=Adds all your local shows to your Trakt.tv collection, and syncs the 'date added'.
+# tvshow.synctraktwatched=Trakt.tv - Synchronize complete 'watched' state
+# tvshow.synctraktwatched.desc=Syncs all 'watched' states from Trakt.tv.
+# tvshow.synctrakt.selected=Trakt.tv - Synchronize selected TV show(s) - 'collected' and 'watched'
+# tvshow.synctrakt.selected.desc=Syncs only the selected TV show(s) with Trakt.tv. Collection and watched state.
 # tvshow.changetodvdorder=Change selected episode(s) to DVD order
 # tvshow.changefromdvdorder=Change selected episode(s) to aired order
 # tvshow.changeorder.desc=This should be used after import, before you scrape
@@ -513,6 +518,7 @@ metatag.guests=Vendégek
 metatag.images=Képek
 metatag.imdb=IMDB Id
 metatag.internal=belső
+# metatag.language=Language
 metatag.mediafiletype=Típus
 metatag.minutes=perc
 metatag.movie=Film
@@ -555,6 +561,7 @@ metatag.trailer=Előzetes
 metatag.url=Url
 metatag.video=Videó
 # metatag.videocodec=Video codec
+# metatag.videobitrate=Video bitrate
 metatag.watched=Megnézett
 metatag.writer=Író
 metatag.year=Év
