--- a/locale/messages_it.properties
+++ b/locale/messages_it.properties
@@ -11,10 +11,10 @@ Button.search=Cerca
 Button.save=Salva
 Button.scrape=Raschia
 Button.edit=Modifica
-# Button.register=Register
-# Button.rename=Rename
-# Button.chooseplayer=Choose player
-# Button.update=Update
+Button.register=Registra
+Button.rename=Rinomina
+Button.chooseplayer=Scegli player
+Button.update=Aggiorna
 
 menuitem.cut=Taglia
 menuitem.copy=Copia
@@ -30,9 +30,9 @@ tmm.tvshow=Serie TV
 tmm.settings=Impostazioni
 
 # menu actions
-# tmm.exit=Quit
+tmm.exit=Esci
 tmm.exit.runningtasks=Serie Tv fonte dati
-# tmm.exit.confirmation=Quit confirmation
+tmm.exit.confirmation=Conferma uscita
 tmm.cache=Cache
 tmm.clearurlcache=pulisci la cache url
 tmm.clearimagecache=pulisci la cache immagine
@@ -49,35 +49,36 @@ tmm.contact=Contattaci
 tmm.donate=Dona
 tmm.searchfield=Ceca...
 tmm.errorlogs=Mostra log di errore 
+# tmm.messages=Show message history
 tmm.wakeonlandevice=Dispositivo Risveglio da Rete
-# tmm.wakeonlan=Wake on LAN
-# tmm.version=Version
-# tmm.builddate=Build date
-# tmm.homepage=Homepage
-# tmm.thanksto=Thanks to
-# tmm.of=of
-# tmm.nfo=NFO
-# tmm.images=Images
-# tmm.trailer=Trailer
-# tmm.subtitles=Subtitles
-# tmm.update.title=Check for update
-# tmm.update.message=A new update has been found.\nDo you want to update?
-# tmm.registeredto=Registered to\:
-# tmm.registerdonator=Register for donator version
-# tmm.registerdonator.error=There was a problem registering your version.\nRegistering your donation in our system may take a while. Please try again in a few minutes.
-# tmm.registerdonator.success=Thank you for registering to the donator version. Please restart tMM.
+tmm.wakeonlan=Wake on LAN
+tmm.version=Versione
+tmm.builddate=Data build
+tmm.homepage=Homepage
+tmm.thanksto=Si ringrazia
+tmm.of=di
+tmm.nfo=NFO
+tmm.images=Immagini
+tmm.trailer=Trailer
+tmm.subtitles=Sottotitoli
+tmm.update.title=Controlla aggiornamenti
+tmm.update.message=E' stato trovato un nuovo aggiornamento.\nVuoi aggiornare?
+tmm.registeredto=Registrato a\:
+tmm.registerdonator=Registra versione donatore
+tmm.registerdonator.error=Si è verificato un problema nel registrare la tua versione.\nLa registrazione della tua donazione sul nostro sistema richiede un pò di tempo. Prova ancora tra qualche minuto.
+tmm.registerdonator.success=Grazie per aver registrato la versione donatore. Per favore riavvia tMM
 # tmm.registerdonator.hint=Here you can register to the donator version. The donator version will have some special features as a "thank you" for our supporters.\n\nPlease fill in the name and email address you used when donating.
 # tmm.registerdonator.thanks=You have already registered to the donator version. Thank you again for donating\!
-# tmm.donatorfunction.hint=This feature is restricted to our donators
-# tmm.help=Help
-# tmm.faq=Frequently asked questions
+tmm.donatorfunction.hint=Questa funzione è riservata ai nostri donatori
+tmm.help=Aiuto
+tmm.faq=Domande ricorrenti
 # tmm.forum=Find help in the tinyMediaManager forum
-# tmm.queued=queued
+tmm.queued=in coda
 # tmm.unknowntitle=Unknown title
-# tmm.problemdetected=Problem detected
+tmm.problemdetected=Problema rilevato
 # tmm.uicrash=Whoops. Something unforeseen has happened.\nPlease restart TMM and try again.\nIf it happens again, we would kindly ask you to submit a bugreport.
 
-# status.activethreads=There are active threads - click for details
+status.activethreads=Ci sono attività in corso - click per i dettagli
 # task.running=Working..
 # task.queued=Waiting..
 # task.cancelled=Cancelled..
@@ -88,7 +89,7 @@ tmm.wakeonlandevice=Dispositivo Risveglio da Rete
 # task.remaining=tasks remaining
 
 # menu & popup on rightclick
-# onlyoneoperation=Only one operation at one time is allowed. The task will be queued
+onlyoneoperation=E' consentita una solo operazione alla volta. L'attività sarà messa in coda
 update.datasource=Aggiorna fonti data
 update.datasource.unavailable=Fonte dati {} non disponibile - salta
 update.datasource.movieinroot=Trovato il file '{}' in una cartella contenente più di un film. Per ottenere l'importazione, attivare la funzione 'Consenti più Film per cartella' nelle impostazioni Film (leggere attentamente\!)
@@ -113,7 +114,7 @@ movie.scrape.metadata.desc=Raschia metadata per i film selezionati
 movie.scrape.nomatchfound=Nessun Film adatto trovato durante la rucerca
 movie.scrape.toosimilar=I titoli dei Film sono troppo simili - non so decidere quale usare
 # movie.scrape.toolowscore=Matching score was too low (<{}) so we are not taking this result
-# movie.remove=Remove selected movie(s) (DB)
+movie.remove=Rimuovi film selezionato(i) (DB)
 # movie.delete=Delete selected movie(s) (DB + file)
 # movie.delete.hint=Delete selected movie(s) from tinyMediaManager DB and your data source\!
 # movie.delete.desc=Delete selected movie(s) from tinyMediaManager DB and the data source?\nThe files will be temporary moved to a folder called .deletedByTMM inside the data source\nand deleted on exit of tinyMediaManager (if activated in settings)
@@ -126,24 +127,26 @@ movie.bulkedit=Modifica massiva
 movie.bulkedit.desc=Cambia genere, etichette, raccolte, e visti/non visti per tutti i Film selezionati
 movie.rewritenfo=Riscrivi NFO per il Film selezionato
 movie.clearimagecache=Pulisci la cache immagine per il Film selezionato
-# movie.findmissing.all=Find missing movies in all datasources
-# movie.findmissing=Find missing movies
+movie.findmissing.all=Trova film mancanti in tutte le sorgenti dati
+movie.findmissing=Trova film mancanti
 # movie.assignmovieset=Find movie sets for selected movie(s)
 # movie.assignmovieset.desc=<html>Assign selected movie(s) to their movie sets<br />This feature is restricted to our donators</html>
 # movie.setwatchedflag=Set the watched flag for selected movie(s)
-# movie.synctrakt=Synchronize the movie collection with Trakt.tv
-# movie.synctrakt.desc=Synchronize the movie collection with Trakt.tv
-# movie.synctraktwatched=Synchronize the watched state with Trakt.tv
-# movie.synctraktwatched.desc=Synchronize the watched state with Trakt.tv
+# movie.synctrakt=Trakt.tv - Synchronize complete 'collection'
+# movie.synctrakt.desc=Adds all your local movies to your Trakt.tv collection, and syncs the 'date added'.
+# movie.synctraktwatched=Trakt.tv - Synchronize complete 'watched' state
+# movie.synctraktwatched.desc=Syncs all 'watched' states from Trakt.tv.
+# movie.synctrakt.selected=Trakt.tv - Synchronize selected movie(s) - 'collected' and 'watched'
+# movie.synctrakt.selected.desc=Syncs only the selected movie(s) with Trakt.tv. Collection and watched state.
 
 movie.export=Esporta i Film selezionati
 
 movie.edit=Modifica Film
 movie.edit.abortqueue.desc=Termina la modifica di tutti i Film selezionati
-# movie.edit.moveactorup=Move selected actor up
-# movie.edit.moveactordown=Move selected actor down
-# movie.edit.moveproducerup=Move selected producer up
-# movie.edit.moveproducerdown=Move selected producer down
+movie.edit.moveactorup=Muovi su attore selezionato
+movie.edit.moveactordown=Muovi giù attore selezionato
+movie.edit.moveproducerup=Muovi su produttore selezionato
+movie.edit.moveproducerdown=Muovi giù produttore selezionato
 
 movie.inmovieset=Film in una raccolta
 movie.notinmovieset=Film non in una raccolta
@@ -165,19 +168,19 @@ movieset.movie.moveup=Sposta il film segnato in alto
 movieset.movie.movedown=Sposta il Film segnato in basso
 movieset.save.desc=Salva i metadata della raccolta
 
-# renamer.oldfolder=Old folder name
-# renamer.newfolder=New folder name
-# renamer.oldfiles=Old file names
-# renamer.newfiles=New file names
+renamer.oldfolder=Vecchio nome cartella
+renamer.newfolder=Nuovo nome cartella
+renamer.oldfiles=Vecchi nomi file
+renamer.newfiles=Nuovi nomi file
 
 cast.actor.add=Aggiungi un nuovo Attore
-# cast.actor.remove=Remove selected Actor
+cast.actor.remove=Rimuovi attore selezionato
 cast.actor.unknown=Attore sconosciuto
 cast.role.unknown=Ruolo sconosciuto
-# cast.producer.add=Add a new Producer
-# cast.producer.remove=Remove selected Producer
-# producer.name.unknown=unknown producer
-# producer.role.unknown=unknown role
+cast.producer.add=Aggiungi un nuovo produttore
+cast.producer.remove=Rimuovi il produttore selezionato
+producer.name.unknown=produttore sconosciuto
+producer.role.unknown=ruolo sconosciuto
 
 scraper=Rasciatore
 scraper.metadata.select=Seleziona i metadata da raschiare
@@ -188,16 +191,16 @@ scraper.artwork=Raschiatore di artwork
 scraper.trailer=Raschiatore dei trailer
 
 image.choose=Scegli un'immagine
-# image.inserturl=Insert an url to an image here
-# image.downloadimage=Download image
+image.inserturl=Inserisci qui la url di un'immagine
+image.downloadimage=Scarica immagine
 image.choose.file=Scegli un file
 image.choose.fanart=Scegli una fanart
 image.choose.poster=Scegli un poster
 image.choose.banner=Scegli striscione
 image.choose.season=Scegli il poster per la stagione
-# image.choose.logo=Choose logo
+image.choose.logo=Scegli logo
 # image.choose.clearart=Choose clearart
-# image.choose.thumb=Choose thumb
+image.choose.thumb=Scegli miniatura
 # image.choose.disc=Choose disc art
 image.extrathumbs.markall=Segna tutte le icone extra
 image.extrathumbs.unmarkall=Deseleziona tutte le icone extra
@@ -242,7 +245,7 @@ BugReport=Riporta un bug
 BugReport.name=Nome
 BugReport.email=Email
 BugReport.email.description=Inserisci una Email valida. Potremmo avere bisogno di contattarti per ottenere più informazioni
-# BugReport.description=Description (in English or German\!)
+BugReport.description=Descrizione (in Inglese o Tedesco\!)
 BugReport.description.empty=Nessuna descrizione fornita
 BugReport.attachments=Allegati
 BugReport.logs=Log
@@ -253,7 +256,7 @@ BugReport.send.ok=Report bug inviato
 Feedback=Invia feedback
 Feedback.name=Nome (opzionale)
 Feedback.email=Email (opzionale)
-# Feedback.message=Feedback (in English or German\!)
+Feedback.message=Feedback (in Inglese o Tedesco\!)
 Feedback.message.empty=Il feedback è vuoto
 Feedback.send.error=Errore nell'invio del feedback
 Feedback.send.ok=Feedback inviato
@@ -261,14 +264,13 @@ Feedback.send.ok=Feedback inviato
 # settings menu (linebreaks with html)
 Settings.movies=Film
 # Settings.scraper=Scraper
-# Settings.images=Images
-# Settings.tvshow=TV Shows
+Settings.images=Immagini
+Settings.tvshow=Serie TV
 Settings.general=Generale
-# Settings.externaldevices=External devices
+Settings.externaldevices=Dispositivi esterni
 # Settings.externalservices=External services
-# Settings.filetypes=File types
+Settings.filetypes=Tipi di file
 # Settings.trakttv=Trakt.tv
-# Settings.trakttv.apikey=Trakt.tv API key
 
 # general settings
 Settings.proxy=Impostazione proxy
@@ -284,13 +286,13 @@ Settings.imagecachebackground=Crea automaticamente la cache dell'immagine in bac
 Settings.loglevel=Livello fi Log
 Settings.language=Lingua Interfaccia Utente
 Settings.languagehint=La lingua cambierà al riavvio\!
-# Settings.shownotifications=Show notifications
-# Settings.mediaplayer.hint=Specify a media player which will be used for playback\r\n(if no one is chosen, the default player will be taken)
+Settings.shownotifications=Mostra notifiche
+Settings.mediaplayer.hint=Specifica un media player da utilizzare per la riproduzione\n(se nessuno viene selezionato, sarà utilizzato il player predefinito)
 # Settings.fonts.hint=tinyMediaManager has been created with the font "Dialog" size 12.\r\nChanging the font and/or size can cause visual glitches (but not break functionality\!)
 # Settings.fontfamily=Font family
 # Settings.fontsize=Font size
 # Settings.fontchangehint=The font will be changed after restart\!
-# Settings.ui=UI settings
+Settings.ui=Impostazioni UI
 # Settings.deletetrash=Delete trash/backup folder on exit
 # Settings.trakt=Automatic sync with Trakt.tv
 # Settings.trakt.clearmovies=Remove movies from Trakt.tv
@@ -304,7 +306,7 @@ Settings.languagehint=La lingua cambierà al riavvio\!
 
 # image settings
 Settings.poster=Poster e Fanart
-# Settings.images=Images
+Settings.images=Immagini
 Settings.source=Sorgente
 Settings.fanarttv.alert=Attenzione\: Fanart.tv non fornisce poster
 Settings.moviefilename=<nome del file del film>
@@ -322,8 +324,8 @@ Settings.movieset.store=Salva artwork raccolte in una cartella separata
 Settings.movieset.foldername=Nome cartella
 Settings.movieset.buttonselect=Seleziona cartella
 Settings.movieset.folderchooser=Seleziona cartella artwork raccolte
-# Settings.image.small=Small
-# Settings.image.medium=Medium
+Settings.image.small=Piccolo
+Settings.image.medium=Medio
 # Settings.image.big=Big
 # Settings.image.large=Large
 
@@ -334,14 +336,14 @@ Settings.certificationCountry=Paese di certificazione
 Settings.scraperTreshold=soglia punteggio
 # Settings.scraperTreshold.hint=This is an indicator of how similar the search query and the results are.\r\nThe automatic scraper will ignore search result scores below the threshold.\r\nBE AWARE\: setting the threshold too low will result in false positives\!\r\n\r\n1 \= 100% the same\r\n0.75 \= default\r\n0 \= they are completely different
 # Settings.default.autoscrape=Automatically scrape images (without selection)
-# Settings.default.autoscrape.language=Prefer language over resolution when choosing images
+Settings.default.autoscrape.language=Preferisci la lingua sulla risoluzione quando si scelgono le immagini
 # Settings.automaticscraper=Automatic scraper
 # Settings.scraperfallback=Fall back to other scrapers when getting no search result
 
 # movie settings
 Settings.movie.datasource=Fonte dati
 # Settings.movie.datasource.remove.info=If you remove %s from your datasources, all movies inside this path will be removed from the TMM database. Continue?
-# Settings.movie.visiblecolumns=Visible columns
+Settings.movie.visiblecolumns=Colonne visibili
 
 Settings.datasource.folderchooser=Aggiungi fonte dei dati
 Settings.datasource.remove=Rimuovi fonte dei dati
@@ -350,6 +352,7 @@ Settings.multipleMovies=Consenti più Film nella stessa cartella
 # Settings.multipleMovies.hint=BE AWARE\: this option will allow you to import multiple movies per folder.\nEnabling this will cause some side effects\: you are no longer be able to\nchoose any specific file naming or use extrafanart/extrathumbs.\nUSING MULTIPLE MOVIES PER FOLDER IS NOT RECOMMENDED\!
 Settings.nfoFormat=Formato NFO
 Settings.nofFileNaming=Nome file NFO
+# Settings.nfo.discstyle=<html>VIDEO_TS / VIDEO_TS.nfo<br />BDMV / index.bdmv</html>
 Settings.videofiletypes=Tipi di file Video
 Settings.extrafiletypes=Sottotitoli e tipi di file addizionali
 Settings.audiofiletypes=Tipi di file Audio
@@ -374,8 +377,8 @@ Settings.macaddress=Indirizzo MAC
 # Settings.movie.badwords.hint=Bad words, which will be removed from\r\nthe detected movie name
 # Settings.runtimefrommediafile=Prefer runtime from MediaInfo
 # Settings.trailer.preferred=Use preferred trailer settings
-# Settings.trailer.source=Trailer source
-# Settings.trailer.quality=Trailer quality
+Settings.trailer.source=Sorgente trailer
+Settings.trailer.quality=Qualità trailer
 
 # Settings.movie.renamer.title=Renamer pattern and options
 # Settings.movie.renamer.optional={} \= optional replacement\r\neg\: {Year $Y} -> "Year 2013" if $Y is not empty\r\nif $Y is empty (or no $x replacement inside) the complete tag is empty
@@ -456,10 +459,12 @@ tvshow.renamer.failedrename=Ridenominazione episodio fallita  {} - stagione e/o 
 # tvshow.renamer.tvshowfolder.year=Add year to the TV show folder
 # tvshow.updatemediainfo=Update media information of selected TV shows(s)/episodes(s)
 # tvshow.export=Export selected TV show(s)
-# tvshow.synctrakt=Synchronize the TV show collection with Trakt.tv
-# tvshow.synctrakt.desc=Synchronize the TV show collection with Trakt.tv
-# tvshow.synctraktwatched=Synchronize the watched state with Trakt.tv
-# tvshow.synctraktwatched.desc=Synchronize the watched state with Trakt.tv
+# tvshow.synctrakt=Trakt.tv - Synchronize complete 'collection'
+# tvshow.synctrakt.desc=Adds all your local shows to your Trakt.tv collection, and syncs the 'date added'.
+# tvshow.synctraktwatched=Trakt.tv - Synchronize complete 'watched' state
+# tvshow.synctraktwatched.desc=Syncs all 'watched' states from Trakt.tv.
+# tvshow.synctrakt.selected=Trakt.tv - Synchronize selected TV show(s) - 'collected' and 'watched'
+# tvshow.synctrakt.selected.desc=Syncs only the selected TV show(s) with Trakt.tv. Collection and watched state.
 # tvshow.changetodvdorder=Change selected episode(s) to DVD order
 # tvshow.changefromdvdorder=Change selected episode(s) to aired order
 # tvshow.changeorder.desc=This should be used after import, before you scrape
@@ -482,7 +487,7 @@ tvshowepisode.choose=Scegli un episodio
 # trakt.clear.tvshows=Clearing Trakt.tv TV show(s)
 
 # metatags
-# metatag.3d=3D
+metatag.3d=3D
 metatag.actors=Attori
 metatag.aired=Trasmesso
 metatag.artwork=Artwork
@@ -493,7 +498,7 @@ metatag.certification=Certificazione
 metatag.codec=Codec
 metatag.country=Paese
 # metatag.crew=Crew
-# metatag.datasource=Datasource
+metatag.datasource=Sorgente dati
 metatag.dateadded=Data di aggiunta
 metatag.details=Dettagli
 metatag.details2=Dettagli 2
@@ -507,12 +512,13 @@ metatag.external=esterno
 # metatag.extraartwork=Extra artwork
 metatag.filename=Nome del file
 metatag.files=File
-# metatag.format=Format
+metatag.format=Formato
 metatag.genre=Generi
 metatag.guests=Ospiti
 metatag.images=Immagini
 metatag.imdb=Id IMDB
 metatag.internal=interno
+# metatag.language=Language
 metatag.mediafiletype=Tipo
 metatag.minutes=minuti
 metatag.movie=Film
@@ -524,7 +530,7 @@ metatag.originaltitle=Titolo originale
 metatag.path=Path
 metatag.plot=Trama
 metatag.production=Produzione
-# metatag.producers=Producers
+metatag.producers=Produttori
 metatag.premiered=Anteorima
 metatag.quality=Qualità
 metatag.rating=Voto
@@ -555,6 +561,7 @@ metatag.trailer=Triler
 metatag.url=Url
 metatag.video=Viedeo
 metatag.videocodec=Codec Video
+# metatag.videobitrate=Video bitrate
 metatag.watched=Visti
 metatag.writer=Scrittore
 metatag.year=Anno
@@ -568,7 +575,7 @@ mediafiletype.video=Video
 mediafiletype.audio=Audio
 mediafiletype.subtitle=Sottotitolo
 mediafiletype.nfo=NFO
-# mediafiletype.text=Text
+mediafiletype.text=Testo
 mediafiletype.poster=Poster
 mediafiletype.fanart=Fanart
 mediafiletype.banner=Striscione
@@ -583,7 +590,7 @@ mediafiletype.graphic=Grafica
 mediafiletype.movie=Film
 mediafiletype.episode=Episodio
 # mediafiletype.season_poster=Season poster
-# mediafiletype.sample=Sample
+mediafiletype.sample=Esempio
 
 chooser.nothingfound=Non ho trovato nulla
 chooser.scrapeing=Raschiando\:
@@ -595,7 +602,7 @@ moviechooser.search=Cerca Film
 tvshowchooser.search=Cerca Serie Tv
 tvshowepisodechooser.search=Cerca episodio
 
-# movieextendedsearch.filter=Filter
+movieextendedsearch.filter=Filtro
 movieextendedsearch.options=Filtro esteso ed opzioni di ordinamento
 movieextendedsearch.filterby=Filtra per
 movieextendedsearch.duplicates=Mostra duplicati
@@ -605,16 +612,16 @@ movieextendedsearch.cast=Membri del Cast
 movieextendedsearch.tag=Etichetta
 movieextendedsearch.movieset=Film in raccolte
 movieextendedsearch.sortby=Ordina per
-# movieextendedsearch.missingmetadata=Missing metadata
-# movieextendedsearch.missingartwork=Missing artwork
-# movieextendedsearch.missingsubtitles=Missing subtitles
-# movieextendedsearch.newmovies=New movies
-# movieextendedsearch.newepisodes=New episodes
+movieextendedsearch.missingmetadata=Metadata mancante
+movieextendedsearch.missingartwork=Artwork mancante
+movieextendedsearch.missingsubtitles=Sottotitoli mancanti
+movieextendedsearch.newmovies=Nuovi film
+movieextendedsearch.newepisodes=Nuovi episodi
 
 logwindow.title=Log d'errore
 summarywindow.title=Sommario
-# whatsnew.title=What's new
-# whatsnew.hint=For more information visit
+whatsnew.title=Novità
+whatsnew.hint=Per ulteriori informazioni visita
 
 message.nfo.writeerror=Scrittura NFO fallita{} {}
 message.nfo.readerror=Analisi NFO fallita
