--- a/locale/messages_ko.properties
+++ b/locale/messages_ko.properties
@@ -49,6 +49,7 @@ tmm.contact=개발자에게
 tmm.donate=기부
 tmm.searchfield=찾기...
 tmm.errorlogs=오류 로그 보기
+# tmm.messages=Show message history
 tmm.wakeonlandevice=Wake on LAN 장치
 tmm.wakeonlan=Wake on LAN
 tmm.version=버전
@@ -131,10 +132,12 @@ movie.clearimagecache=선택한 영화 이미지 캐시 정리
 # movie.assignmovieset=Find movie sets for selected movie(s)
 # movie.assignmovieset.desc=<html>Assign selected movie(s) to their movie sets<br />This feature is restricted to our donators</html>
 # movie.setwatchedflag=Set the watched flag for selected movie(s)
-# movie.synctrakt=Synchronize the movie collection with Trakt.tv
-# movie.synctrakt.desc=Synchronize the movie collection with Trakt.tv
-# movie.synctraktwatched=Synchronize the watched state with Trakt.tv
-# movie.synctraktwatched.desc=Synchronize the watched state with Trakt.tv
+# movie.synctrakt=Trakt.tv - Synchronize complete 'collection'
+# movie.synctrakt.desc=Adds all your local movies to your Trakt.tv collection, and syncs the 'date added'.
+# movie.synctraktwatched=Trakt.tv - Synchronize complete 'watched' state
+# movie.synctraktwatched.desc=Syncs all 'watched' states from Trakt.tv.
+# movie.synctrakt.selected=Trakt.tv - Synchronize selected movie(s) - 'collected' and 'watched'
+# movie.synctrakt.selected.desc=Syncs only the selected movie(s) with Trakt.tv. Collection and watched state.
 
 movie.export=선택한 영화 내보내기
 
@@ -268,7 +271,6 @@ Settings.general=일반
 # Settings.externalservices=External services
 # Settings.filetypes=File types
 # Settings.trakttv=Trakt.tv
-# Settings.trakttv.apikey=Trakt.tv API key
 
 # general settings
 Settings.proxy=프록시 설정
@@ -350,6 +352,7 @@ Settings.multipleMovies=한 폴더에 여러 개의 영화 허용
 Settings.multipleMovies.hint=주의\: 이 옵션은 한 폴더에서 여러 개의 영화를 가져오는 것을 허용합니다.\n이 옵션을 활성화하면 특정 파일 이름을 선택하지 못하거나\n추가 팬아트/썸네일을 사용할 수 없습니다.\n한 폴더에 여러 개의 영화를 저장하는 것은 권장하지 않습니다\!
 Settings.nfoFormat=NFO 형식
 Settings.nofFileNaming=NFO 파일 이름 변경
+# Settings.nfo.discstyle=<html>VIDEO_TS / VIDEO_TS.nfo<br />BDMV / index.bdmv</html>
 Settings.videofiletypes=비디오 파일 종류
 Settings.extrafiletypes=자막과 기타 파일 종류
 Settings.audiofiletypes=오디오 파일 종류
@@ -456,10 +459,12 @@ tvshow.renamer.failedrename=에피소드 {} 이름 변경 실패 - 잘못된 시
 # tvshow.renamer.tvshowfolder.year=Add year to the TV show folder
 # tvshow.updatemediainfo=Update media information of selected TV shows(s)/episodes(s)
 # tvshow.export=Export selected TV show(s)
-# tvshow.synctrakt=Synchronize the TV show collection with Trakt.tv
-# tvshow.synctrakt.desc=Synchronize the TV show collection with Trakt.tv
-# tvshow.synctraktwatched=Synchronize the watched state with Trakt.tv
-# tvshow.synctraktwatched.desc=Synchronize the watched state with Trakt.tv
+# tvshow.synctrakt=Trakt.tv - Synchronize complete 'collection'
+# tvshow.synctrakt.desc=Adds all your local shows to your Trakt.tv collection, and syncs the 'date added'.
+# tvshow.synctraktwatched=Trakt.tv - Synchronize complete 'watched' state
+# tvshow.synctraktwatched.desc=Syncs all 'watched' states from Trakt.tv.
+# tvshow.synctrakt.selected=Trakt.tv - Synchronize selected TV show(s) - 'collected' and 'watched'
+# tvshow.synctrakt.selected.desc=Syncs only the selected TV show(s) with Trakt.tv. Collection and watched state.
 # tvshow.changetodvdorder=Change selected episode(s) to DVD order
 # tvshow.changefromdvdorder=Change selected episode(s) to aired order
 # tvshow.changeorder.desc=This should be used after import, before you scrape
@@ -513,6 +518,7 @@ metatag.guests=특별출연
 metatag.images=이미지
 metatag.imdb=IMDB ID
 metatag.internal=내부
+# metatag.language=Language
 metatag.mediafiletype=종류
 metatag.minutes=분
 metatag.movie=영화
@@ -555,6 +561,7 @@ metatag.trailer=예고편
 metatag.url=URL
 metatag.video=비디오
 metatag.videocodec=비디오 코덱
+# metatag.videobitrate=Video bitrate
 metatag.watched=시청함
 metatag.writer=작가
 metatag.year=연도
