--- a/locale/messages_nl.properties
+++ b/locale/messages_nl.properties
@@ -49,6 +49,7 @@ tmm.contact=Neem contact op
 tmm.donate=Doneren
 tmm.searchfield=Zoeken...
 tmm.errorlogs=Toon fout log
+tmm.messages=Toon berichten historie
 tmm.wakeonlandevice=Wake on LAN apparaat
 tmm.wakeonlan=Wake on LAN
 tmm.version=Versie
@@ -131,10 +132,12 @@ movie.findmissing=Zoek missende films
 movie.assignmovieset=Zoek film set(s) voor geselecteerde film(s)
 movie.assignmovieset.desc=<html>Koppel geselecteerde film(s) aan hun film set(s)<br />Deze functie is voorbehouden aan donateurs</html>
 movie.setwatchedflag=Label de geselecteerde film(s) als bekeken
-movie.synctrakt=Synchroniseer de film collectie met Trakt.tv
-movie.synctrakt.desc=Synchroniseer de film collectie met Trakt.tv
-movie.synctraktwatched=Synchroniseer de bekeken status met Trakt.tv
-movie.synctraktwatched.desc=Synchroniseer de bekeken status met Trakt.tv
+# movie.synctrakt=Trakt.tv - Synchronize complete 'collection'
+# movie.synctrakt.desc=Adds all your local movies to your Trakt.tv collection, and syncs the 'date added'.
+# movie.synctraktwatched=Trakt.tv - Synchronize complete 'watched' state
+# movie.synctraktwatched.desc=Syncs all 'watched' states from Trakt.tv.
+# movie.synctrakt.selected=Trakt.tv - Synchronize selected movie(s) - 'collected' and 'watched'
+# movie.synctrakt.selected.desc=Syncs only the selected movie(s) with Trakt.tv. Collection and watched state.
 
 movie.export=Geselecteerde film(s) exporteren
 
@@ -167,8 +170,8 @@ movieset.save.desc=Filmset metadata opslaan
 
 renamer.oldfolder=Oude map naam
 renamer.newfolder=Nieuwe map naam
-renamer.oldfiles=Oude bestand naam
-renamer.newfiles=Nieuwe bestand namen
+renamer.oldfiles=Oude bestandsnaam
+renamer.newfiles=Nieuwe bestandsnamen
 
 cast.actor.add=Nieuwe acteur toevoegen
 cast.actor.remove=Verwijder geselecteerde Acteur
@@ -268,7 +271,6 @@ Settings.externaldevices=Externe apparaten
 Settings.externalservices=Externe services
 Settings.filetypes=Bestand types
 Settings.trakttv=Trakt.tv
-Settings.trakttv.apikey=Trakt.tv API key
 
 # general settings
 Settings.proxy=Proxy instellingen
@@ -297,10 +299,10 @@ Settings.trakt.clearmovies=Verwijder films uit Trakt.tv
 Settings.trakt.clearmovies.hint=Waarschuwing\: Dit zal al uw films en bekeken status uit uw Trakt.tv profiel verwijderen. Doorgaan?
 Settings.trakt.cleartvshows=Verwijder TV series uit Trakt.tv
 Settings.trakt.cleartvshows.hint=Waarschuwing\: Dit zal al uw TV series en bekeken status uit uw Trakt.tv profiel verwijderen. Doorgaan?
-# Settings.misc=Misc. settings
-# Settings.memoryborder=Memory settings
-# Settings.memory=Max. memory
-# Settings.memory.hint=Increase this value if you get OutOfMemoryError (Java heap space) or if you've got a large database and tinyMediaManager is running slow.\r\nBe aware\: this amount of memory has to be free whenever tinyMediaManager starts. Default 512MB\r\nChanging this value needs a restart of tinyMediaManager to take effect
+Settings.misc=Div. instellingen
+Settings.memoryborder=Geheugen instellingen
+Settings.memory=Max. geheugen
+Settings.memory.hint=Vergroot deze waarde bij\: OutOfMemoryError (Java heap space) Of bij een grote database waarbij tinyMediaManager zich traag gedraagt.\nLet op\: Deze hoeveelheid geheugen moet beschikbaar zijn als tinyMediaManager start. Standaard 512MB\ntinyMediaManager moet worden herstart als de waarde wordt veranderd.
 
 # image settings
 Settings.poster=Poster en Fanart
@@ -350,6 +352,7 @@ Settings.multipleMovies=Sta meerdere films per map toe
 Settings.multipleMovies.hint=VOORZICHTIG\: deze optie laat je meerdere films per map importeren.\nActivering heeft de volgende nadelen\: Je kunt niet langer specifieke\nbestandsnamen of extrafanart/extrathumbs kiezen.\nGEBRUIK VAN MEERDERE FILMS IN ÉÉN MAP IS NIET AANBEVOLEN\!
 Settings.nfoFormat=NFO format
 Settings.nofFileNaming=NFO bestandsbenaming
+Settings.nfo.discstyle=<html>VIDEO_TS / VIDEO_TS.nfo<br />BDMV / index.bdmv</html>
 Settings.videofiletypes=Video bestandtypes
 Settings.extrafiletypes=Ondertitel en extra bestandtypes
 Settings.audiofiletypes=Audio bestandtypes
@@ -358,8 +361,8 @@ Settings.sorting.info=Kies voorvoegsels. Heeft invloed op de sorteer volgorde va
 Settings.renamer=Naam Aanpasser
 Settings.renamer.folder=Map naam
 Settings.renamer.file=Bestandsnaam
-# Settings.renamer.token=Token description
-# Settings.renamer.value=Value from the example
+Settings.renamer.token=Token beschrijving
+Settings.renamer.value=Waarde van het voorbeeld
 Settings.renamer.asciireplacement=Vervang niet ASCII karakters met hun basis ASCII equivalent
 Settings.renamer.asciireplacement.hint=Voorbeelden\: Ä \=> Ae; Ö \=> Oe; ß \=> ss; Á \= > A; Æ \=> Ae; ...
 Settings.cleanupoptions=Opschoon opties
@@ -377,55 +380,55 @@ Settings.trailer.preferred=Gebruik voorkeurs instellingen voor trailers
 Settings.trailer.source=Trailer bron
 Settings.trailer.quality=Trailer kwaliteit
 
-# Settings.movie.renamer.title=Renamer pattern and options
-# Settings.movie.renamer.optional={} \= optional replacement\r\neg\: {Year $Y} -> "Year 2013" if $Y is not empty\r\nif $Y is empty (or no $x replacement inside) the complete tag is empty
+Settings.movie.renamer.title=Hernoemer patroon en opties
+Settings.movie.renamer.optional={} \= optional replacement\neg\: {Year $Y} -> "Year 2013" if $Y is not empty\nif $Y is empty (or no $x replacement inside) the complete tag is empty
 Settings.movie.renamer.example=Kies een hernoem patroon voor de map en bestand \nHernoemen wordt overgeslagen bij lege velden\!
 Settings.movie.renamer.nomovie=tenmiste één film is nodig voor het voorbeeld
 Settings.movie.renamer.spacesubstitution=Vervang spaties door
 
-# Settings.movie.renamer.$T=Title
-# Settings.movie.renamer.$O=Original title
-# Settings.movie.renamer.$1=first letter of the title
-# Settings.movie.renamer.$E=Sort title
-# Settings.movie.renamer.$2=first letter of sort title
-# Settings.movie.renamer.$Y=Year
-# Settings.movie.renamer.$M=Movieset title (sort title)
-# Settings.movie.renamer.$N=Movieset title
-# Settings.movie.renamer.$I=IMDB number
-# Settings.movie.renamer.$C=Certification
-# Settings.movie.renamer.$G=First genre
-# Settings.movie.renamer.$L=Language
-# Settings.movie.renamer.$R=Video resolution
-# Settings.movie.renamer.$A=audio code + channels
-# Settings.movie.renamer.$V=video code + format
-# Settings.movie.renamer.$F=video format
-# Settings.movie.renamer.$S=media source (DVD etc)
-# Settings.movie.renamer.$3=3D tag (3D SBS/TAB)
+Settings.movie.renamer.$T=Titel
+Settings.movie.renamer.$O=Originele titel
+Settings.movie.renamer.$1=eerste letter van de titel
+Settings.movie.renamer.$E=Sorteer titel
+Settings.movie.renamer.$2=eerste letter van de sorteer titel
+Settings.movie.renamer.$Y=Jaar
+Settings.movie.renamer.$M=Filmset titel (sorteer titel)
+Settings.movie.renamer.$N=Filmset titel
+Settings.movie.renamer.$I=IMDB nummer
+Settings.movie.renamer.$C=Certificatie
+Settings.movie.renamer.$G=Eerste genre
+Settings.movie.renamer.$L=Taal
+Settings.movie.renamer.$R=Video resolutie
+Settings.movie.renamer.$A=audio code + kanalen
+Settings.movie.renamer.$V=video code + formaat
+Settings.movie.renamer.$F=video formaat
+Settings.movie.renamer.$S=media bron (DVD enz)
+Settings.movie.renamer.$3=3D tag (3D SBS/TAB)
 
-# Settings.tvshow.renamer.title=Renamer pattern and options
+Settings.tvshow.renamer.title=Hernoemer patroon en opties
 
-# Settings.tvshow.renamer.$N=TV show name
-# Settings.tvshow.renamer.$Y=Year
-# Settings.tvshow.renamer.$T=Episode title
-# Settings.tvshow.renamer.$F=Video format
-# Settings.tvshow.renamer.$1=Season number
-# Settings.tvshow.renamer.$2=Season number with at least 2 digits
-# Settings.tvshow.renamer.$E=Episode number
-# Settings.tvshow.renamer.$R=Video resolution
-# Settings.tvshow.renamer.$A=audio code + channels
-# Settings.tvshow.renamer.$V=video code + format
-# Settings.tvshow.renamer.$F=Video format
+Settings.tvshow.renamer.$N=TV show naam
+Settings.tvshow.renamer.$Y=Jaar
+Settings.tvshow.renamer.$T=Aflevering titel
+Settings.tvshow.renamer.$F=Video formaat
+Settings.tvshow.renamer.$1=Seizoen nummer
+Settings.tvshow.renamer.$2=Seizoen nummer met minstens 2 cijfers
+Settings.tvshow.renamer.$E=Aflevering nummer
+Settings.tvshow.renamer.$R=Video resolutie
+Settings.tvshow.renamer.$A=audio code + kanalen
+Settings.tvshow.renamer.$V=video code + formaat
+Settings.tvshow.renamer.$F=Video formaat
 
 
 # tv show settings
 Settings.tvshowdatasource=TV show databronnen
 Settings.tvshowdatasource.folderchooser=TV show databron toevoegen
 Settings.tvshowdatasource.remove.info=Als je %s uit de databronnen verwijderd worden alle TV Series en afleveringen binnen dit pad uit de database verwijderd. Doorgaan?
-# Settings.dvdorder=Imported episodes are in DVD order
+Settings.dvdorder=Geïmporteerde afleveringen zijn DVD volgorde
 
-# Settings.tvshowfoldername=TV show folder name
-# Settings.tvshowseasonfoldername=Season folder name
-# Settings.tvshowfilename=Episode file name
+Settings.tvshowfoldername=TV show map naam
+Settings.tvshowseasonfoldername=Seizoen map naam
+Settings.tvshowfilename=Aflevering bestandsnaam
 Settings.tvshowspacereplacement.hint=Vervang spaties in titel met dit karakter
 Settings.tvshow.certifactioncountry.hint=Tip\: Momenteel ondersteund geen enkele scraper certificaties uit verschillende landen. \nDe TV Database zal altijd US certificaties opleveren.\nAniDB biedt geen certificaties
 
@@ -456,13 +459,15 @@ tvshow.renamer.tvshowfolder=Hernoem TV serie map
 tvshow.renamer.tvshowfolder.year=Jaar toevoegen aan TV serie map
 tvshow.updatemediainfo=Media informatie van geselecteerde TV serie(s)/aflevering(en) bijwerken
 tvshow.export=Exporteer geselecteerde TV serie(s)
-tvshow.synctrakt=Synchroniseer de TV serie collectie met Trakt.tv
-tvshow.synctrakt.desc=Synchroniseer de TV serie collectie met Trakt.tv
-tvshow.synctraktwatched=Synchroniseer de bekeken status met Trakt.tv
-tvshow.synctraktwatched.desc=Synchroniseer de bekeken status met Trakt.tv
-# tvshow.changetodvdorder=Change selected episode(s) to DVD order
-# tvshow.changefromdvdorder=Change selected episode(s) to aired order
-# tvshow.changeorder.desc=This should be used after import, before you scrape
+# tvshow.synctrakt=Trakt.tv - Synchronize complete 'collection'
+# tvshow.synctrakt.desc=Adds all your local shows to your Trakt.tv collection, and syncs the 'date added'.
+# tvshow.synctraktwatched=Trakt.tv - Synchronize complete 'watched' state
+# tvshow.synctraktwatched.desc=Syncs all 'watched' states from Trakt.tv.
+# tvshow.synctrakt.selected=Trakt.tv - Synchronize selected TV show(s) - 'collected' and 'watched'
+# tvshow.synctrakt.selected.desc=Syncs only the selected TV show(s) with Trakt.tv. Collection and watched state.
+tvshow.changetodvdorder=Verander geselecteerde aflevering(en) naar DVD volgorde
+tvshow.changefromdvdorder=Verander geselecteerde aflevering(en) naar uitzending volgorde
+tvshow.changeorder.desc=Dit moet worden gebruikt na importeren en voor het scrapen
 
 tvshowepisode.scrape=Metadata aflevering scrapen
 tvshowepisode.scrape.withoutartwork=Scrape aflevering metadata (zonder thumbs)
@@ -498,9 +503,9 @@ metatag.dateadded=Datum toegevoegd
 metatag.details=Details
 metatag.details2=Details 2
 metatag.director=Regisseur
-# metatag.dvdepisode=DVD episode
-# metatag.dvdorder=DVD ordering
-# metatag.dvdseason=DVD season
+metatag.dvdepisode=DVD aflevering
+metatag.dvdorder=DVD sortering
+metatag.dvdseason=DVD seizoen
 metatag.episode=Aflevering
 metatag.episodes=Afleveringen
 metatag.external=extern
@@ -513,6 +518,7 @@ metatag.guests=Gasten
 metatag.images=Afbeeldingen
 metatag.imdb=IMDB Id
 metatag.internal=intern
+metatag.language=Taal
 metatag.mediafiletype=Type
 metatag.minutes=min
 metatag.movie=Film
@@ -555,6 +561,7 @@ metatag.trailer=Trailer
 metatag.url=Url
 metatag.video=Video
 metatag.videocodec=Video codec
+metatag.videobitrate=Video bitrate
 metatag.watched=Bekeken
 metatag.writer=Schrijver
 metatag.year=Jaar
@@ -709,8 +716,8 @@ Genres.WESTERN = Western
 ####################################
 # Scraper hints. Since scraper will be loaded dynamically, the texts resist here for now
 scraper.tmdb.hint=<html><h3>The Movie Database (TMDb)</h3><br />De grootste gratis film database onderhouden door haar gebruikers. Het levert metadata en afbeeldingen<br />in vele verschillende talen. Dus it het de eerste keuze voor niet engelse gebruikers.<br /><br />Beschikbare talen\: Verschillende</html>
-# scraper.imdb.hint=<html><h3>Internet Movie Database (IMDB)</h3><br />The most used database for movies all over the world.<br />Does not contain plot/title/tagline in every language. You may choose to download these texts from TMDB<br /><br />Available languages\: multiple</html>
-# scraper.ofdb.hint=<html><h3>Online Filmdatenbank (OFDb)</h3><br />A german movie database driven by the community.<br /><br />Available languages\: DE</html>
-# scraper.zelluloid.hint=<html><h3>Zelluloid.de</h3><br />A german movie database.<br /><br />Available languages\: DE</html>
-# scraper.moviemeter.hint=<html><h3>Moviemeter.nl</h3><br />A dutch movie database.<br /><br />Available languages\: NL</html>
-# scraper.rottentomatoes.hint=<html><h3>Rotten Tomatoes</h3><br />An american movie database.<br />Does not provide plot for older films via the API.<br /><br />Available languages\: EN</html>
+scraper.imdb.hint=<html><h3>Internet Movie Database (IMDB)</h3><br />De meest gebruikte database voor films ter wereld.<br />Bevat geen plot/titel/tagline in elke taal. Je kunt er voor kiezen om deze te downloaden van TMDB<br /><br />Beschikbare talen\: Meerdere</html>
+scraper.ofdb.hint=<html><h3>Online Filmdatenbank (OFDb)</h3><br />Een Duitse film database onderhouden door haar community.<br /><br />Beschikbare talen\: DE</html>
+scraper.zelluloid.hint=<html><h3>Zelluloid.de</h3><br />Een Duitse film database.<br /><br />Beschikbare talen\: DE</html>
+scraper.moviemeter.hint=<html><h3>Moviemeter.nl</h3><br />Een Nederlandse database.<br /><br />Beschikbare talen\: NL</html>
+scraper.rottentomatoes.hint=<html><h3>Rotten Tomatoes</h3><br />Een Amerikaanse film database.<br />Voorziet niet in plots voor oudere films via de API.<br /><br />Beschikbare talen\: EN</html>
