--- a/locale/messages_no.properties
+++ b/locale/messages_no.properties
@@ -49,6 +49,7 @@ tmm.contact=Kontakt oss
 tmm.donate=Donere
 tmm.searchfield=Søk...
 tmm.errorlogs=Vis feil logg
+tmm.messages=Vis meldings historikk
 tmm.wakeonlandevice=Wake on LAN enhet
 tmm.wakeonlan=Wake on LAN
 tmm.version=Versjon
@@ -131,10 +132,12 @@ movie.findmissing=Finn manglende filmer
 movie.assignmovieset=Finn valgt(e) film-sett
 movie.assignmovieset.desc=<html>Legg valgt(e) film(er) til deres film-sett<br />Denne funksjonen er forbeholdt de som donerer</html>
 movie.setwatchedflag=Sett "har sett" tilstand for valgt(e) film(er).
-movie.synctrakt=Synkroniser film samlingen med Trakt.tv
-movie.synctrakt.desc=Synkroniser film samlingen med Trakt.tv
-movie.synctraktwatched=Synkroniser "har sett" tilstand med Trakt.tv
-movie.synctraktwatched.desc=Synkroniser "har sett" tilstand med Trakt.tv
+movie.synctrakt=Trakt.tv - Synkroniser hele 'samlingen'
+movie.synctrakt.desc=Legger alle dine lokale filmer til Trakt.tv samlingen din samt synkroniserer 'dato lagt til'.
+movie.synctraktwatched=Trakt.tv - Synkroniser komplett 'har sett' tilstand
+movie.synctraktwatched.desc=Synkroniserer alle 'har sett' tilstander fra Trakt.tv
+movie.synctrakt.selected=Trakt.tv - Synkroniser valgt(e) film(er) - 'samlet' og 'har sett'
+movie.synctrakt.selected.desc=Synkroniserer bare valgt(e) film(er) med Trakt.tv. Samling og 'har sett' tilstand.
 
 movie.export=Eksporter valgt(e) film(er)
 
@@ -268,7 +271,6 @@ Settings.externaldevices=Eksterne enheter
 Settings.externalservices=Eksterne tjenester
 Settings.filetypes=Fil typer
 Settings.trakttv=Trakt.tv
-Settings.trakttv.apikey=Trakt.tv API nøkkel
 
 # general settings
 Settings.proxy=Proxy Innstillinger
@@ -297,10 +299,10 @@ Settings.trakt.clearmovies=Fjern filmer fra Trakt.tv
 Settings.trakt.clearmovies.hint=VIKTIG\: Dette vil fjerne alle filmene og alle "har sett" fra din Trakt.tv profil. Fortsette?
 Settings.trakt.cleartvshows=Fjern TV serier fra Trakt.tv
 Settings.trakt.cleartvshows.hint=VIKTIG\: Dette vil fjerne alle TV serier og "har sett" tilstander fra Trakt.tv profilen din. Fortsett?
-# Settings.misc=Misc. settings
-# Settings.memoryborder=Memory settings
-# Settings.memory=Max. memory
-# Settings.memory.hint=Increase this value if you get OutOfMemoryError (Java heap space) or if you've got a large database and tinyMediaManager is running slow.\r\nBe aware\: this amount of memory has to be free whenever tinyMediaManager starts. Default 512MB\r\nChanging this value needs a restart of tinyMediaManager to take effect
+Settings.misc=Diverse innstillinger
+Settings.memoryborder=Minne innstillinger
+Settings.memory=Maks minne
+Settings.memory.hint=Øke denne verdien hvis du får OutOfMemoryError (Java heap space) eller du har en stor database og tinyMediaManager er treg.\nVær oppmerksom\: du må ha denne mengden minne ledig når tinyMediaManager starter. Standard er 512MB\nEndring av verdien krever en omstart av tinyMediaManager.
 
 # image settings
 Settings.poster=Plakater og Fanart
@@ -350,6 +352,7 @@ Settings.multipleMovies=Tillat flere filmer pr mappe
 Settings.multipleMovies.hint=NOTE\: dette valget vil tillate flere filmer pr. mappe.\nAktivering vil resultere i noen bivirkninger; du vil ikke kunne bruke\nekstra fanart eller ekstra miniatyrer.\n\nFLERE FILMER PR MAPPE ER IKKE ANBEFALT\!
 Settings.nfoFormat=NFO format
 Settings.nofFileNaming=NFO fil navngivelse
+Settings.nfo.discstyle=<html>VIDEO_TS / VIDEO_TS.nfo<br />BDMV / index.bdmv</html>
 Settings.videofiletypes=Video filtyper
 Settings.extrafiletypes=Undertekster og ekstra filtyper
 Settings.audiofiletypes=Audio filtyper
@@ -393,7 +396,7 @@ Settings.movie.renamer.$M=Film-sett tittel (sorter på tittel)
 Settings.movie.renamer.$N=Film-sett tittel
 Settings.movie.renamer.$I=IMDB nummer
 Settings.movie.renamer.$C=Aldersgrense
-# Settings.movie.renamer.$G=First genre
+Settings.movie.renamer.$G=Første sjanger
 Settings.movie.renamer.$L=Språk
 Settings.movie.renamer.$R=Film oppløsning
 Settings.movie.renamer.$A=Audio kode + kanaler
@@ -402,30 +405,30 @@ Settings.movie.renamer.$F=video format
 Settings.movie.renamer.$S=media kilde (DVD etc.)
 Settings.movie.renamer.$3=3D tag (3D SBS/TAB)
 
-# Settings.tvshow.renamer.title=Renamer pattern and options
+Settings.tvshow.renamer.title=Mønster og valg for Omdøperen
 
-# Settings.tvshow.renamer.$N=TV show name
-# Settings.tvshow.renamer.$Y=Year
-# Settings.tvshow.renamer.$T=Episode title
-# Settings.tvshow.renamer.$F=Video format
-# Settings.tvshow.renamer.$1=Season number
-# Settings.tvshow.renamer.$2=Season number with at least 2 digits
-# Settings.tvshow.renamer.$E=Episode number
-# Settings.tvshow.renamer.$R=Video resolution
-# Settings.tvshow.renamer.$A=audio code + channels
-# Settings.tvshow.renamer.$V=video code + format
-# Settings.tvshow.renamer.$F=Video format
+Settings.tvshow.renamer.$N=Navn på TV serie
+Settings.tvshow.renamer.$Y=År
+Settings.tvshow.renamer.$T=Tittel på episode
+Settings.tvshow.renamer.$F=Video format
+Settings.tvshow.renamer.$1=Nummer på sesong
+Settings.tvshow.renamer.$2=Nummer på sesong, minst 2 tall
+Settings.tvshow.renamer.$E=Nummer på episode
+Settings.tvshow.renamer.$R=Film oppløsning
+Settings.tvshow.renamer.$A=Audio kode + kanaler
+Settings.tvshow.renamer.$V=video kode + format
+Settings.tvshow.renamer.$F=Video format
 
 
 # tv show settings
 Settings.tvshowdatasource=Datakilder for TV Serier
 Settings.tvshowdatasource.folderchooser=legg til datakilde for TV serier
 Settings.tvshowdatasource.remove.info=Hvis du fjerner %s fra dine datakilder vil alle berørte TV serier bli fjernet fra databasen. Fortsette?
-# Settings.dvdorder=Imported episodes are in DVD order
+Settings.dvdorder=Rekkefølgen for importerte episoder er etter DVD
 
-# Settings.tvshowfoldername=TV show folder name
-# Settings.tvshowseasonfoldername=Season folder name
-# Settings.tvshowfilename=Episode file name
+Settings.tvshowfoldername=Mappenavn for TV serie
+Settings.tvshowseasonfoldername=Sesong mappe navn
+Settings.tvshowfilename=Filnavn for episode
 Settings.tvshowspacereplacement.hint=Bytt mellomrom i tittel med dette tegnet
 Settings.tvshow.certifactioncountry.hint=Hint\: ingen av datainnsamlerne støtter aldersgrense fra forskjellige land.\nTV Database vil alltid returnere aldersgrense fra US.\nAniDB støtter ikke aldersgrense.
 
@@ -456,13 +459,15 @@ tvshow.renamer.tvshowfolder=Gi nytt navn til TV serie mappen
 tvshow.renamer.tvshowfolder.year=Legg til årstall i mappenavnet for TV serie
 tvshow.updatemediainfo=Oppdater media informasjon for valgt(e) TV serie(r)/episode(r)
 tvshow.export=Eksporter valgte TV serie(r)
-tvshow.synctrakt=Synkroniser TV serie samlingen med Trakt.tv
-tvshow.synctrakt.desc=Synkroniser TV serie samlingen med Trakt.tv
-tvshow.synctraktwatched=Synkroniser "har sett" tilstand med Trakt.tv
-tvshow.synctraktwatched.desc=Synkroniser "har sett" tilstand med Trakt.tv
-# tvshow.changetodvdorder=Change selected episode(s) to DVD order
-# tvshow.changefromdvdorder=Change selected episode(s) to aired order
-# tvshow.changeorder.desc=This should be used after import, before you scrape
+tvshow.synctrakt=Trakt.tv - Synkroniser hele 'samlingen'
+tvshow.synctrakt.desc=Legger alle dine lokale TV-serier til Trakt.tv samlingen din samt synkroniserer 'dato lagt til'.
+tvshow.synctraktwatched=Trakt.tv - Synkroniser komplett 'har sett' tilstand
+tvshow.synctraktwatched.desc=Synkroniserer alle 'har sett' tilstander fra Trakt.tv
+tvshow.synctrakt.selected=Trakt.tv - Synkroniser valgt(e) TV-serie(r) - 'samlet' og 'har sett'
+tvshow.synctrakt.selected.desc=Synkroniserer bare valgt(e) TV-serie(r) med Trakt.tv. Samling og 'har sett' tilstand.
+tvshow.changetodvdorder=Endre rekkefølge for valgt(e) episode(r) til DVD
+tvshow.changefromdvdorder=Endre rekkefølge for valgt(e) episode(r) til lansert
+tvshow.changeorder.desc=Denne burde brukes etter import, før datainnsamling
 
 tvshowepisode.scrape=Hent metadata for episode
 tvshowepisode.scrape.withoutartwork=Hent metadata for episode (ikke miniatyrbilder)
@@ -498,9 +503,9 @@ metatag.dateadded=Dato lagt til
 metatag.details=Detaljer
 metatag.details2=Detaljer 2
 metatag.director=Instruktør
-# metatag.dvdepisode=DVD episode
-# metatag.dvdorder=DVD ordering
-# metatag.dvdseason=DVD season
+metatag.dvdepisode=DVD episode
+metatag.dvdorder=DVD rekkefølge
+metatag.dvdseason=DVD sesong
 metatag.episode=Episode
 metatag.episodes=Episoder
 metatag.external=eksternt
@@ -513,6 +518,7 @@ metatag.guests=Gjester
 metatag.images=Bilder
 metatag.imdb=IMDB Id
 metatag.internal=internt
+metatag.language=Språk
 metatag.mediafiletype=Type
 metatag.minutes=min
 metatag.movie=Film
@@ -555,6 +561,7 @@ metatag.trailer=Trailer
 metatag.url=Url
 metatag.video=Video
 metatag.videocodec=Video kodec
+metatag.videobitrate=Video bitrate
 metatag.watched="Har sett"
 metatag.writer=Forfatter
 metatag.year=År
