--- a/locale/messages_pt.properties
+++ b/locale/messages_pt.properties
@@ -49,6 +49,7 @@ tmm.contact=Contato
 tmm.donate=Doar
 tmm.searchfield=Buscar...
 tmm.errorlogs=Mostrar log de erros
+# tmm.messages=Show message history
 tmm.wakeonlandevice=Dispositivo Wake on LAN
 tmm.wakeonlan=Wake on LAN
 tmm.version=Versão
@@ -131,10 +132,12 @@ movie.findmissing=Buscar filmes não localizados
 movie.assignmovieset=Encontrar coleções para o(s) filme(s) selecionado(s)
 movie.assignmovieset.desc=<html>Associar o(s) filme(s) selecionados à coleção<br />Esta função é restrita aos nossos doadores</html>
 movie.setwatchedflag=Marcar o(s) filme(s) selecionado(s) como assistido(s)
-movie.synctrakt=Sincronizar a coleção de filmes com Trakt.tv 
-movie.synctrakt.desc=Sincronizar a coleção de filmes com Trakt.tv 
-movie.synctraktwatched=Sincronizar os assistidos com Trakt.tv 
-movie.synctraktwatched.desc=Sincronizar os assistidos com Trakt.tv 
+# movie.synctrakt=Trakt.tv - Synchronize complete 'collection'
+# movie.synctrakt.desc=Adds all your local movies to your Trakt.tv collection, and syncs the 'date added'.
+# movie.synctraktwatched=Trakt.tv - Synchronize complete 'watched' state
+# movie.synctraktwatched.desc=Syncs all 'watched' states from Trakt.tv.
+# movie.synctrakt.selected=Trakt.tv - Synchronize selected movie(s) - 'collected' and 'watched'
+# movie.synctrakt.selected.desc=Syncs only the selected movie(s) with Trakt.tv. Collection and watched state.
 
 movie.export=Exportar filme(s) selecionado(s)
 
@@ -268,7 +271,6 @@ Settings.externaldevices=Dispositivos externos
 Settings.externalservices=Dispositivos externos
 Settings.filetypes=Tipos de arquivo
 Settings.trakttv=Trakt.tv
-Settings.trakttv.apikey=Trakt.tv API key
 
 # general settings
 Settings.proxy=Configurações de Proxy
@@ -350,6 +352,7 @@ Settings.multipleMovies=Permitir múltiplos filmes por diretório
 Settings.multipleMovies.hint=ATENÇÃO\: esta opção permitirá importar múltiplos filmes por diretório.\nHabilitar pode causar efeitos colaterais\: você não será mais capaz de\nescolher nenhum tipo de nomenclatura específica para extrafanart/extrathumbs.\nUSAR MÚLTIPLOS FILMES POR DIRETÓRIO NÃO É RECOMENDADO\!
 Settings.nfoFormat=formato NFO
 Settings.nofFileNaming=Nome NFO
+# Settings.nfo.discstyle=<html>VIDEO_TS / VIDEO_TS.nfo<br />BDMV / index.bdmv</html>
 Settings.videofiletypes=Tipos de vídeo
 Settings.extrafiletypes=Legendas e arquivos adicionais
 Settings.audiofiletypes=Arquivos de áudio
@@ -456,10 +459,12 @@ tvshow.renamer.tvshowfolder=Renomear diretório Programas de TV
 tvshow.renamer.tvshowfolder.year=Adicionar ano ao Diretório dos Programas de TV
 tvshow.updatemediainfo=Atualizar informação de mídia do(s) Programa(s) de TV selecionado(s)
 tvshow.export=Exportar programa(s) de TV selecionado(s)
-tvshow.synctrakt=Sincronizar a coleção de Programas de TV com Trakt.tv
-tvshow.synctrakt.desc=Sincronizar a coleção de Programas de TV com Trakt.tv
-tvshow.synctraktwatched=Sincronizar os assistidos com Trakt.tv 
-tvshow.synctraktwatched.desc=Sincronizar os assistidos com Trakt.tv  
+# tvshow.synctrakt=Trakt.tv - Synchronize complete 'collection'
+# tvshow.synctrakt.desc=Adds all your local shows to your Trakt.tv collection, and syncs the 'date added'.
+# tvshow.synctraktwatched=Trakt.tv - Synchronize complete 'watched' state
+# tvshow.synctraktwatched.desc=Syncs all 'watched' states from Trakt.tv.
+# tvshow.synctrakt.selected=Trakt.tv - Synchronize selected TV show(s) - 'collected' and 'watched'
+# tvshow.synctrakt.selected.desc=Syncs only the selected TV show(s) with Trakt.tv. Collection and watched state.
 # tvshow.changetodvdorder=Change selected episode(s) to DVD order
 # tvshow.changefromdvdorder=Change selected episode(s) to aired order
 # tvshow.changeorder.desc=This should be used after import, before you scrape
@@ -513,6 +518,7 @@ metatag.guests=Convidados
 metatag.images=Imagens
 metatag.imdb=IMDB Id
 metatag.internal=interno
+# metatag.language=Language
 metatag.mediafiletype=Tipo
 metatag.minutes=min
 metatag.movie=Filme
@@ -555,6 +561,7 @@ metatag.trailer=Trailer
 metatag.url=Url
 metatag.video=Vídeo
 metatag.videocodec=Codec de Vídeo
+# metatag.videobitrate=Video bitrate
 metatag.watched=Assistido
 metatag.writer=Escritor
 metatag.year=Ano
