--- a/locale/messages_sk.properties
+++ b/locale/messages_sk.properties
@@ -49,6 +49,7 @@ tmm.contact=Kontakt
 tmm.donate=Prispieť
 tmm.searchfield=Hľadať...
 tmm.errorlogs=Zobraziť protokol chýb
+tmm.messages=Zobraziť históriu správ
 tmm.wakeonlandevice=Wake on LAN device
 tmm.wakeonlan=Wake on LAN
 tmm.version=Verzia
@@ -131,10 +132,12 @@ movie.findmissing=Nájsť chýbajúce filmy
 movie.assignmovieset=Nájsť kolekcie filmov pre označené filmy
 movie.assignmovieset.desc=Priradiť označené filmy k ich kolekciam. Táto funkcia je vyhradená pre našich sponzorov.
 movie.setwatchedflag=Zmeniť označenie 'Videné' pre označené filmy
-movie.synctrakt=Synchronizovať kolekciu filmou s Trakt.tv
-movie.synctrakt.desc=Synchronizovať kolekciu filmou s Trakt.tv
-movie.synctraktwatched=Synchronizovať označenie 'Videné' s Trakt.tv
-movie.synctraktwatched.desc=Synchronizovať označenie 'Videné' s Trakt.tv
+movie.synctrakt=Trakt.tv - Synchronizovať kompletnú 'kolekciu'
+movie.synctrakt.desc=Pridá všetky lokálne filmy do Vašej Trakt.tv kolekcie a synchronizuje 'dátum pridania'.
+movie.synctraktwatched=Trakt.tv - Synchronizovať všetky označenia 'Videné'
+movie.synctraktwatched.desc=Synchronizuje všetky označenia 'Videné' od Trakt.tv
+movie.synctrakt.selected=Trakt.tv - Synchronizovať označené filmy - 'Collected' a 'Videné'
+movie.synctrakt.selected.desc=Synchronizuje iba označené filmy s Trakt.tv. Kolekciu a označenie 'Videné'.
 
 movie.export=Exportovať označené filmy
 
@@ -268,7 +271,6 @@ Settings.externaldevices=Externé zariadenia
 Settings.externalservices=Externé služby
 Settings.filetypes=Typy súborov
 Settings.trakttv=Trakt.tv
-Settings.trakttv.apikey=Trakt.tv API key
 
 # general settings
 Settings.proxy=Nastavenia proxy
@@ -297,10 +299,10 @@ Settings.trakt.clearmovies=Odstrániť filmy z Trakt.tv
 Settings.trakt.clearmovies.hint=POZOR\: Toto odstráni všetky vaše filmy a označenie 'Videné' z vášho Trakt.tv profilu. Pokračovať?
 Settings.trakt.cleartvshows=Odstrániť seriály z Trakt.tv
 Settings.trakt.cleartvshows.hint=POZOR\: Toto odstráni všetky vaše seriály a označenie 'Videné' z vášho Trakt.tv profilu. Pokračovať?
-# Settings.misc=Misc. settings
-# Settings.memoryborder=Memory settings
-# Settings.memory=Max. memory
-# Settings.memory.hint=Increase this value if you get OutOfMemoryError (Java heap space) or if you've got a large database and tinyMediaManager is running slow.\r\nBe aware\: this amount of memory has to be free whenever tinyMediaManager starts. Default 512MB\r\nChanging this value needs a restart of tinyMediaManager to take effect
+Settings.misc=Ďalšie nastavenia
+Settings.memoryborder=Nastavenia pamäte
+Settings.memory=Max. pamäť
+Settings.memory.hint=Zvýšte túto hodnotu pokiaľ dostávate upozornenie OutOfMemoryError (Java heap space) alebo pokiaľ máte veľkú databázu a tinyMediaManager je pomalý.\nUpozornenie\: toto množstvo pamäte musí byť voľné pri spustení tinyMediaManager. Prednastavené 512MB\nAby prebehla zmena musíte reštartovať tinyMediaManager
 
 # image settings
 Settings.poster=Plagát a FanArt
@@ -350,6 +352,7 @@ Settings.multipleMovies=Povoliť viac filmov v jednom priečinku
 Settings.multipleMovies.hint=POZOR\: Táto voľba umožní importovať viacero filmov z jedného adresára.\nPo povolení tejto funkcie nebude možné vybrať špecifické pomenovanie súborov\nani použiť extraFanArt.\nPOUŽITIE VIACERÝCH FILMOV NA ADRESÁR SA NEDOPORUČUJE\!
 Settings.nfoFormat=Formát NFO
 Settings.nofFileNaming=Pomenovanie súboru NFO
+Settings.nfo.discstyle=<html>VIDEO_TS / VIDEO_TS.nfo<br />BDMV / index.bdmv</html>
 Settings.videofiletypes=Video typy súborov
 Settings.extrafiletypes=Titulky a prídavné typy súborov
 Settings.audiofiletypes=Audio typy súborov
@@ -358,8 +361,8 @@ Settings.sorting.info=Vybrať prefixy, ktoré budú mať vplyv na poradie v zozn
 Settings.renamer=Premenovanie
 Settings.renamer.folder=Názov priečinku
 Settings.renamer.file=Názov súboru
-# Settings.renamer.token=Token description
-# Settings.renamer.value=Value from the example
+Settings.renamer.token=Popis
+Settings.renamer.value=Ukážka z príkladu
 Settings.renamer.asciireplacement=Nahradiť znaky nenachádzajúce sa v ASCII ich ekvivalentami ASCII
 Settings.renamer.asciireplacement.hint=Napíklad\: Ä \=> Ae; Ö \=> Oe; ß \=> ss; Á \= > A; Æ \=> Ae; ...
 Settings.cleanupoptions=Nastavenia čistenia
@@ -377,8 +380,8 @@ Settings.trailer.preferred=Použiť preferované nastavenia traileru
 Settings.trailer.source=Zdroj traileru
 Settings.trailer.quality=Kvalita traileru
 
-# Settings.movie.renamer.title=Renamer pattern and options
-# Settings.movie.renamer.optional={} \= optional replacement\r\neg\: {Year $Y} -> "Year 2013" if $Y is not empty\r\nif $Y is empty (or no $x replacement inside) the complete tag is empty
+Settings.movie.renamer.title=Nastavenie a formát premenovania
+Settings.movie.renamer.optional={} \= voliteľná náhrada\nnapr\: {Rok $Y} -> "Rok 2013" pokiaľ nie je $Y prázdne\npokiaľ je $Y prázdne (alebo nieje vo vnútry náhrada $x) kompletný tag je prázdny
 Settings.movie.renamer.example=Vyberte vzor pre premenovanie priečinku a súboru.\nAk sú polia prázdne, premenovanie bude preskočené\!
 Settings.movie.renamer.nomovie=pre príklad Je potrebný aspoň jeden film
 Settings.movie.renamer.spacesubstitution=Miesto medzery použiť
@@ -396,13 +399,13 @@ Settings.movie.renamer.$C=Certifikácia
 Settings.movie.renamer.$G=Prvý žáner
 Settings.movie.renamer.$L=Jazyk
 Settings.movie.renamer.$R=Rozlíšenie videa
-# Settings.movie.renamer.$A=audio code + channels
-# Settings.movie.renamer.$V=video code + format
-# Settings.movie.renamer.$F=video format
-# Settings.movie.renamer.$S=media source (DVD etc)
-# Settings.movie.renamer.$3=3D tag (3D SBS/TAB)
+Settings.movie.renamer.$A=Audio kodek + kanály
+Settings.movie.renamer.$V=Video kodek + formát
+Settings.movie.renamer.$F=Formát videa
+Settings.movie.renamer.$S=zdroj média (DVD a pod.)
+Settings.movie.renamer.$3=3D značka (3D SBS/TAB)
 
-# Settings.tvshow.renamer.title=Renamer pattern and options
+Settings.tvshow.renamer.title=Nastavenie a formát premenovania
 
 Settings.tvshow.renamer.$N=Názov seriálu
 Settings.tvshow.renamer.$Y=Rok
@@ -421,7 +424,7 @@ Settings.tvshow.renamer.$F=Formát videa
 Settings.tvshowdatasource=Zdroje dát seriálov
 Settings.tvshowdatasource.folderchooser=Pridať zdroj dát seriálov
 Settings.tvshowdatasource.remove.info=Pokiaľ odstránite %s z vašich zdrojov dát, všetky seriály a epizódy v tomto umiestnení budú odstránené z databázy TMM. Chcete pokračovať?
-# Settings.dvdorder=Imported episodes are in DVD order
+Settings.dvdorder=Importované epizódy sú v DVD poradí
 
 Settings.tvshowfoldername=Názov priečinku seriálu
 Settings.tvshowseasonfoldername=Názov priečinku sezóny
@@ -456,13 +459,15 @@ tvshow.renamer.tvshowfolder=Premenovať priečinok seriálov
 tvshow.renamer.tvshowfolder.year=Pridať rok do priečinka seriálov
 tvshow.updatemediainfo=Aktualizovať informácie o médiu označených seriálov/epizód
 tvshow.export=Exportovať označené seriály
-tvshow.synctrakt=Synchronizovať kolekciu seriálov s Trakt.tv
-tvshow.synctrakt.desc=Synchronizovať kolekciu seriálov s Trakt.tv
-tvshow.synctraktwatched=Synchronizovanie označenia 'Videné' s Trakt.tv
-tvshow.synctraktwatched.desc=Synchronizovanie označenia 'Videné' s Trakt.tv
-# tvshow.changetodvdorder=Change selected episode(s) to DVD order
-# tvshow.changefromdvdorder=Change selected episode(s) to aired order
-# tvshow.changeorder.desc=This should be used after import, before you scrape
+tvshow.synctrakt=Trakt.tv - Synchronizovať kompletnú 'kolekciu'
+tvshow.synctrakt.desc=Pridá všetky lokálne seriály do Vašej Trakt.tv kolekcie a synchronizuje 'dátum pridania'.
+tvshow.synctraktwatched=Trakt.tv - Synchronizovať všetky označenia 'Videné'
+tvshow.synctraktwatched.desc=Synchronizovať označenie 'Videné' s Trakt.tv
+tvshow.synctrakt.selected=Trakt.tv - Synchronizovať označené seriály - 'collected' a 'watched'
+tvshow.synctrakt.selected.desc=Synchronizuje iba označené seriály s Trakt.tv. Kolekciu a označenie 'Videné'.
+tvshow.changetodvdorder=Zmeniť označené epizódy na DVD poradie
+tvshow.changefromdvdorder=Zmeniť označené epizódy na odvysielané poradie
+tvshow.changeorder.desc=Toto by malo byť použité po importe, predtým ako sa stiahnú informácie
 
 tvshowepisode.scrape=Stiahni metadáta epizódy
 tvshowepisode.scrape.withoutartwork=Stiahni metadáta epizódy (bez náhľadov)
@@ -498,9 +503,9 @@ metatag.dateadded=Dátum pridania
 metatag.details=Detaily
 metatag.details2=Detaily 2
 metatag.director=Réžia
-# metatag.dvdepisode=DVD episode
-# metatag.dvdorder=DVD ordering
-# metatag.dvdseason=DVD season
+metatag.dvdepisode=DVD epizóda
+metatag.dvdorder=DVD poradie
+metatag.dvdseason=DVD sezóna
 metatag.episode=Epizóda
 metatag.episodes=Epizódy
 metatag.external=externé
@@ -513,6 +518,7 @@ metatag.guests=Hrajú
 metatag.images=Obrázky
 metatag.imdb=IMDB Id
 metatag.internal=vnútorné
+metatag.language=Jazyk
 metatag.mediafiletype=Typ
 metatag.minutes=min
 metatag.movie=Film
@@ -555,6 +561,7 @@ metatag.trailer=Trailer
 metatag.url=Url
 metatag.video=Video
 metatag.videocodec=Video kodek
+metatag.videobitrate=Bitrate videa
 metatag.watched=Videné
 metatag.writer=Napísal
 metatag.year=Rok
@@ -709,8 +716,8 @@ Genres.WESTERN = Western
 ####################################
 # Scraper hints. Since scraper will be loaded dynamically, the texts resist here for now
 scraper.tmdb.hint=<html><h3>The Movie Database (TMDb)</h3><br />Najväčšia voľná databáza udržiavaná komunitou. Poskytuje metadáta a artwork<br />v rôznych jazykoch.<br /><br />Dostupné jazyky\: viaceré</html>
-scraper.imdb.hint=<html><h3>Internet Movie Database (IMDB)</h3><br />Najpoužívanejšia databáza filmov z celého sveta..<br />Neobsahuje Obsah/Názov/Stručné info v každom jazyku. Môžete si vybrať, stiahnuť tieto texty z TMDB<br /><br />Dostupné jazyky\: viaceré</html>
-# scraper.ofdb.hint=<html><h3>Online Filmdatenbank (OFDb)</h3><br />A german movie database driven by the community.<br /><br />Available languages\: DE</html>
-# scraper.zelluloid.hint=<html><h3>Zelluloid.de</h3><br />A german movie database.<br /><br />Available languages\: DE</html>
-# scraper.moviemeter.hint=<html><h3>Moviemeter.nl</h3><br />A dutch movie database.<br /><br />Available languages\: NL</html>
-# scraper.rottentomatoes.hint=<html><h3>Rotten Tomatoes</h3><br />An american movie database.<br />Does not provide plot for older films via the API.<br /><br />Available languages\: EN</html>
+scraper.imdb.hint=<html><h3>Internet Movie Database (IMDB)</h3><br />Najpoužívanejšia databáza filmov z celého sveta.<br />Neobsahuje Obsah/Názov/Stručné info v každom jazyku. Môžete si vybrať, stiahnuť tieto texty z TMDB.<br /><br />Dostupné jazyky\: viaceré</html>
+scraper.ofdb.hint=<html><h3>Online Filmdatenbank (OFDb)</h3><br />Nemecká filmová databáza udržiavaná komunitou.<br /><br />Dostupné jazyky\: DE</html>
+scraper.zelluloid.hint=<html><h3>Zelluloid.de</h3><br />Nemecká filmová databáza.<br /><br />Dostupné jazyky\: DE</html>
+scraper.moviemeter.hint=<html><h3>Moviemeter.nl</h3><br />Holandská filmová databáza<br /><br />Dostupné jazyky\: NL</html>
+scraper.rottentomatoes.hint=<html><h3>Rotten Tomatoes</h3><br />Americká filmová databáza.<br />Neposkytuje obsah pre staršie filmy cez API.<br /><br />Dostupné jazyky\: EN</html>
