--- a/locale/messages_sv.properties
+++ b/locale/messages_sv.properties
@@ -49,6 +49,7 @@ tmm.contact=Kontakta oss
 tmm.donate=Donera
 tmm.searchfield=Sök...
 tmm.errorlogs=Visa felloggen
+tmm.messages=Visa meddelandehistorik
 tmm.wakeonlandevice=Wake on LAN enhet
 tmm.wakeonlan=Wake on LAN
 tmm.version=Version
@@ -131,10 +132,12 @@ movie.findmissing=Hitta saknade filmer
 movie.assignmovieset=Hitta samlingar för de valda filmerna
 movie.assignmovieset.desc=<html>Placera de valda filmerna i sina filmsamlingar<br />Den här funktion är endast tillgänglig för våra donatorer</html>
 movie.setwatchedflag=Markera valda filmer som sedda
-movie.synctrakt=Synkronisera samlingen av filmer med Trakt.tv
-movie.synctrakt.desc=Synkronisera samlingen av filmer med Trakt.tv
-movie.synctraktwatched=Synkronisera sedd/inte sedd markeringen med Trakt.tv
-movie.synctraktwatched.desc=Synkronisera sedd/inte sedd markeringen med Trakt.tv
+movie.synctrakt=Trakt.tv - synkronisera hel 'samling'
+movie.synctrakt.desc=Lägger till alla dina lokala filmer till din Trakt.tv samling, och synkroniserar 'datum tillagd'
+movie.synctraktwatched=Trakt.tv - synkronisera alla 'sedda'
+movie.synctraktwatched.desc=Synkroniserar alla 'sedda' från Trakt.tv
+movie.synctrakt.selected=Trakt.tv - synkronisera valda filmer - 'samlingar' och 'sedda'
+movie.synctrakt.selected.desc=Synkroniserar endast valda filmer med Trakt.tv. Samlingar och sedda.
 
 movie.export=Exportera valda filmer
 
@@ -268,7 +271,6 @@ Settings.externaldevices=Externa enheter
 Settings.externalservices=Externa tjänster
 Settings.filetypes=Filtyper
 Settings.trakttv=Trakt.tv
-Settings.trakttv.apikey=Nyckel till API för Trakt.tv
 
 # general settings
 Settings.proxy=Inställningar för proxy
@@ -350,6 +352,7 @@ Settings.multipleMovies=Tillåt flera filmer i varje katalog
 Settings.multipleMovies.hint=OBS\: Det här alternativet tillåter att du lägger flera filmer i varje katalog.\nDet orsakar sidoeffekter\: du kan inte välja en speciell namngivning på filer eller använda extra fanart/miniatyrer\nFLERA FILMER PER KATALOG REKOMMENDERAS INTE\!
 Settings.nfoFormat=NFO format
 Settings.nofFileNaming=Namngivning av NFO-fil
+Settings.nfo.discstyle=<html>VIDEO_TS / VIDEO_TS.nfo<br />BDMV / index.bdmv</html>
 Settings.videofiletypes=Filtyper för video
 Settings.extrafiletypes=Undertext och övriga filtyper
 Settings.audiofiletypes=Filtyper för audio
@@ -456,10 +459,12 @@ tvshow.renamer.tvshowfolder=Byt namn på TV-programmets katalog
 tvshow.renamer.tvshowfolder.year=Lägg till årtal på TV-programmets katalognamn
 tvshow.updatemediainfo=Uppdatera mediainformation för valda TV-program/avsnitt
 tvshow.export=Exportera valda TV-program
-tvshow.synctrakt=Synkronisera samlingen av TV-program med Trakt.tv
-tvshow.synctrakt.desc=Synkronisera samlingen av TV-program med Trakt.tv
-tvshow.synctraktwatched=Synkronisera sedd/inte sedd markeringar med Trakt.tv data
-tvshow.synctraktwatched.desc=Synkronisera sedd/inte sedd markeringar med Trakt.tv data
+tvshow.synctrakt=Trakt.tv - synkronisera hel 'samling'
+tvshow.synctrakt.desc=Lägger till alla dina lokala TV-serier till din Trakt.tv samling, och synkroniserar 'datum tillagd'
+tvshow.synctraktwatched=Trakt.tv - synkronisera alla 'sedda'
+tvshow.synctraktwatched.desc=Synkroniserar alla 'sedda' från Trakt.tv
+tvshow.synctrakt.selected=Trakt.tv - synkronisera valda TV-serier - 'samlingar' och 'sedda'
+tvshow.synctrakt.selected.desc=Synkroniserar endast valda TV-serier med Trakt.tv. Samlingar och sedda.
 tvshow.changetodvdorder=Ändra de valda avsnitten till DVD-ordning
 tvshow.changefromdvdorder=Ändra de valda avsnitten till sänd ordning
 tvshow.changeorder.desc=Det här bör användas efter import innan du hämtar metadata
@@ -513,6 +518,7 @@ metatag.guests=Gäster
 metatag.images=Bilder
 metatag.imdb=IMDB Id
 metatag.internal=intern
+metatag.language=Språk
 metatag.mediafiletype=Typ
 metatag.minutes=min
 metatag.movie=Film
@@ -555,6 +561,7 @@ metatag.trailer=Trailer
 metatag.url=Web-adress
 metatag.video=Video
 metatag.videocodec=Videoavkodare
+metatag.videobitrate=Video bitrate
 metatag.watched=Sedd
 metatag.writer=Manus
 metatag.year=År
