--- a/locale/messages_tr.properties
+++ b/locale/messages_tr.properties
@@ -49,6 +49,7 @@ tmm.contact=İletişim
 tmm.donate=Bağış Yap
 tmm.searchfield=Ara...
 tmm.errorlogs=Hata loglarını göster
+tmm.messages=İleti geçmişini göster
 tmm.wakeonlandevice=Wake on LAN cihazı
 tmm.wakeonlan=Wake on LAN
 tmm.version=Sürüm
@@ -131,10 +132,12 @@ movie.findmissing=Eksik filmleri bul
 movie.assignmovieset=Seçili film(ler) için film serilerini ara
 movie.assignmovieset.desc=<html>Seçilen film(ler)i kendi film serilerinize atayın<br />Bu özellik sadece bağış yapanlar içindir.</html>
 movie.setwatchedflag=Seçili film(ler)e izleme işareti ata
-movie.synctrakt=Trakt.tv film kütüphanesini eşitle
-movie.synctrakt.desc=Trakt.tv film kütüphanesini eşitle
-movie.synctraktwatched=Trakt.tv izlenme durmunu eşitle
-movie.synctraktwatched.desc=Trakt.tv TV Programı kütüphanesini eşitle
+movie.synctrakt=Trakt.tv - 'Kolleksiyon'un tümünü eşitle
+movie.synctrakt.desc=Yerel olarak saklanan tüm filmleri Trakt.tv kolleksiyonunuza ekleyin ve 'eklenme tarihlerini' eşitleyin.
+movie.synctraktwatched=Trakt.tv - 'İzlenme durumu'un tümünü eşitle
+movie.synctraktwatched.desc='İzlenme durumu'un tümünü Trakt.tv'den eşitle
+movie.synctrakt.selected=Trakt.tv - Seçili film(ler)i eşitle - 'kolleksiyon' ve 'izlenme durumu'
+movie.synctrakt.selected.desc=Sadece seçili film(ler)i Trakt.tv'den eşitle. Kolleksiyon ve izlenme durumu.
 
 movie.export=Seçili filmleri dışarı aktar
 
@@ -188,7 +191,7 @@ scraper.artwork=Artwork eşitletiyici
 scraper.trailer=Fragman eşitletiyici
 
 image.choose=Bir resim seç
-# image.inserturl=Insert an url to an image here
+image.inserturl=Resimler için URL girin
 image.downloadimage=Resim indir
 image.choose.file=Dosya seç
 image.choose.fanart=Fanart seç
@@ -268,7 +271,6 @@ Settings.externaldevices=Harici cihazlar
 Settings.externalservices=Harici servisler
 Settings.filetypes=Dosya türleri
 Settings.trakttv=Trakt.tv
-Settings.trakttv.apikey=Trakt.tv API anahtarı
 
 # general settings
 Settings.proxy=Proksi ayarları
@@ -297,17 +299,17 @@ Settings.trakt.clearmovies=Trakt.tv ile eşitlenen filmleri kaldır
 Settings.trakt.clearmovies.hint=UYARI\: Bu seçenek Trakt.tv profilinizdeki filmleri ve izleme istatistiklerini kaldırır. Emin misiniz?
 Settings.trakt.cleartvshows=Trakt.tv ile eşitlenen TV Programlarını kaldır
 Settings.trakt.cleartvshows.hint=UYARI\: Bu seçenek Trakt.tv profilinizdeki TV Programlarını ve izleme istatistiklerini kaldırır. Emin misiniz?
-# Settings.misc=Misc. settings
-# Settings.memoryborder=Memory settings
-# Settings.memory=Max. memory
-# Settings.memory.hint=Increase this value if you get OutOfMemoryError (Java heap space) or if you've got a large database and tinyMediaManager is running slow.\r\nBe aware\: this amount of memory has to be free whenever tinyMediaManager starts. Default 512MB\r\nChanging this value needs a restart of tinyMediaManager to take effect
+Settings.misc=Misc. ayarları
+Settings.memoryborder=Hafıza ayarları
+Settings.memory=Maks.hafıza
+Settings.memory.hint=Eğer OutOfMemoryError alırsanız bu değeri artırın  (Java heap space) veya eğer veritabanı çok büyükse tinyMediaManager yavaş çalışır.\nUnutmayın\: tinyMediaManager başlatılırken bu kadar bellek boş olmalıdır\: Varsayılan 512MB\nBu değişikliklerin etkili olabilmesi için tinyMediaManager yeniden başlatılmalıdır.
 
 # image settings
 Settings.poster=Poster ve Fanart
 Settings.images=Resimler
 Settings.source=Kaynak
 Settings.fanarttv.alert=Uyarı\: Fanart.tv poster içeriği sağlamaz
-Settings.moviefilename=<film dosya ismi>
+Settings.moviefilename=<movie filename>
 Settings.tbn.deprecation=.tbn kalktı, bu nedenle yakında silinecektir
 Settings.naming.info=NOT\: Yukarıdaki seçeneklere göre artwork formatı/türüne bağlı olarak .JPG veya .PNG uzantısına  bir dosya adı oluşturur.
 Settings.extraartwork=Ekstra artworke izin ver
@@ -333,8 +335,8 @@ Settings.preferredLanguage=Tercih edilen dil
 Settings.certificationCountry=Belgelendirme ülkesi
 Settings.scraperTreshold=Puan eşiği
 Settings.scraperTreshold.hint=Bu gösterge, benzer arama sorgusu ve sonuçlarını etkiler.\nOtomatik işleyici, eşiğinin altında kalan arama sonuçlarını göz ardı edecektir.\nUNUTMAYIN\: Çok düşük eşik ayarı, yanlış sonuçlanacaktır\!\n\n1 \= 100% aynısı\n0.75 \= varsayılan\n0 \= tamamen farklı
-# Settings.default.autoscrape=Automatically scrape images (without selection)
-# Settings.default.autoscrape.language=Prefer language over resolution when choosing images
+Settings.default.autoscrape=Resimleri otomatik olarak al (seçimden bağımsız)
+Settings.default.autoscrape.language=Resim seçiminde çözünürlük tercihi
 Settings.automaticscraper=Otomatik işleyici
 Settings.scraperfallback=Arama sonucu bulunamadığı için işleyici sonlandırıldı
 
@@ -350,6 +352,7 @@ Settings.multipleMovies=Klasör başına birden fazla filme izin ver
 Settings.multipleMovies.hint=UNUTMAYIN\: Bu ​​seçenek klasör başına birden fazla film eklemeye izin verecektir.\nBunun etkinleştirilmesi bazı etkilere neden olur\: Artık herhangi bir özel dosya adlandırma veya extrafanart/extrathumb kullanılabilir.\n KLASÖR BAŞINA BİRDEN FAZLA FİLM KULLANILMASI TAVSİYE EDİLMEZ\!
 Settings.nfoFormat=NFO formatı
 Settings.nofFileNaming=NFO dosya isimlendirmesi
+Settings.nfo.discstyle=<html>VIDEO_TS / VIDEO_TS.nfo<br />BDMV / index.bdmv</html>
 Settings.videofiletypes=Video dosya türleri
 Settings.extrafiletypes=Atyazı ve ek dosya türleri
 Settings.audiofiletypes=Ses dosya türleri
@@ -377,17 +380,17 @@ Settings.trailer.preferred=Fragman tercihi ayarları
 Settings.trailer.source=Fragman kaynağı
 Settings.trailer.quality=Fragman kalitesi
 
-# Settings.movie.renamer.title=Renamer pattern and options
-# Settings.movie.renamer.optional={} \= optional replacement\r\neg\: {Year $Y} -> "Year 2013" if $Y is not empty\r\nif $Y is empty (or no $x replacement inside) the complete tag is empty
+Settings.movie.renamer.title=Yeniden adlandırma modelleri
+Settings.movie.renamer.optional={} \= isteğe bağlı değiştirme\nÖrn\: {Yıl $Y} -> "Yıl 2013" eğer $Y boş değilse.\neğer $Yboşsa (veya $x tanımı bulunmuyorsa) tüm etiket görmezden gelinir.
 Settings.movie.renamer.example=Klasör ve dosya isimlendirme modelini seçin.\neğer alanlar boş ise, yeniden isimlendirme atlanır\!
 Settings.movie.renamer.nomovie=en az bir film için gerekli olan, örneğin
 Settings.movie.renamer.spacesubstitution=Boşlukları bununla değiştir\:
 
 Settings.movie.renamer.$T=Başlık
 Settings.movie.renamer.$O=Orjinal başlık
-# Settings.movie.renamer.$1=first letter of the title
+Settings.movie.renamer.$1=başlığın ilk harfi
 Settings.movie.renamer.$E=Başlığa göre sırala
-# Settings.movie.renamer.$2=first letter of sort title
+Settings.movie.renamer.$2=sıralama başlığının ilk harfi
 Settings.movie.renamer.$Y=Yıl
 Settings.movie.renamer.$M=Film serisi başlığı (başlığa göre sırala)
 Settings.movie.renamer.$N=Film serisi başlığı
@@ -402,14 +405,14 @@ Settings.movie.renamer.$F=video formatı
 Settings.movie.renamer.$S=medya kaynağı (DVD vb)
 Settings.movie.renamer.$3=3D etiketi (3D SBS/TAB)
 
-# Settings.tvshow.renamer.title=Renamer pattern and options
+Settings.tvshow.renamer.title=Yeniden adlandırma modelleri
 
 Settings.tvshow.renamer.$N=TV Programı ismi
 Settings.tvshow.renamer.$Y=Yıl
 Settings.tvshow.renamer.$T=Bölüm başlığı
 Settings.tvshow.renamer.$F=Video formatı
 Settings.tvshow.renamer.$1=Sezon numarası
-# Settings.tvshow.renamer.$2=Season number with at least 2 digits
+Settings.tvshow.renamer.$2=Sezon numarası (en az 2 basamak)
 Settings.tvshow.renamer.$E=Bölüm numarası
 Settings.tvshow.renamer.$R=Video çözünürlüğü
 Settings.tvshow.renamer.$A=ses kodlayıcı + kanal
@@ -421,7 +424,7 @@ Settings.tvshow.renamer.$F=Video formatı
 Settings.tvshowdatasource=TV Programı veri kaynağı
 Settings.tvshowdatasource.folderchooser=TV Programı veri kaynağı ekle
 Settings.tvshowdatasource.remove.info=Eğer %s'ı veri tabanından kaldırırsanız, yol içinde bulunan tüm TV Programları ve bölümler TMM veri tabanından kaldırılacaktır. Devam etmek istiyor musunuz?
-# Settings.dvdorder=Imported episodes are in DVD order
+Settings.dvdorder=Bölümleri, DVD sıralamasına göre al
 
 Settings.tvshowfoldername=TV Programı klasör ismi
 Settings.tvshowseasonfoldername=Sezon klasörü ismi
@@ -456,13 +459,15 @@ tvshow.renamer.tvshowfolder=TV Programı klasörünü yeniden isimlendir
 tvshow.renamer.tvshowfolder.year=TV Programı klasörüne yıl ekle
 tvshow.updatemediainfo=Seçili TV Programı(ları)nın/bölümün(lerin) medya bilgilerini güncelle
 tvshow.export=Seçili TV Programı(larını) dışa aktar
-tvshow.synctrakt=Trakt.tv TV Programı kütüphanesini eşitle
-tvshow.synctrakt.desc=Trakt.tv TV Programı kütüphanesini eşitle
-tvshow.synctraktwatched=Trakt.tv izlenme durmunu eşitle
-tvshow.synctraktwatched.desc=Trakt.tv izlenme durmunu eşitle
-# tvshow.changetodvdorder=Change selected episode(s) to DVD order
-# tvshow.changefromdvdorder=Change selected episode(s) to aired order
-# tvshow.changeorder.desc=This should be used after import, before you scrape
+tvshow.synctrakt=Trakt.tv - 'Kolleksiyon'un tümünü senkronize et
+tvshow.synctrakt.desc=Yerel olarak saklanan tüm TV Programlarını Trakt.tv kolleksiyonunuza ekleyin ve 'eklenme tarihlerini' eşitleyin.
+tvshow.synctraktwatched=Trakt.tv - 'İzlenme durumu'un tümünü eşitle
+tvshow.synctraktwatched.desc='İzlenme durumu'un tümünü Trakt.tv'den eşitle
+tvshow.synctrakt.selected=Trakt.tv - Seçili TV Program(ların)ı eşitle - 'kolleksiyon' ve 'izlenme durumu'
+tvshow.synctrakt.selected.desc=Sadece seçili TV Program(ların)ı Trakt.tv'den eşitle. Kolleksiyon ve izlenme durumu.
+tvshow.changetodvdorder=Seçili bölümleri DVD sıralamasına göre değiştir
+tvshow.changefromdvdorder=Seçili bölümleri yayın tarihi sıralamasına göre değiştir
+tvshow.changeorder.desc=İçe aktarma sonrası kullanılmalıdır, öncesinde scrape yapılmalıdır
 
 tvshowepisode.scrape=Bölüm ana verilerini işle
 tvshowepisode.scrape.withoutartwork=Bölüm ana verisini işle (thumblar olmadan)
@@ -495,8 +500,8 @@ metatag.country=Ülke
 metatag.crew=Ekip
 metatag.datasource=Vari kaynağı
 metatag.dateadded=Eklenme zamanı
-metatag.details=Dataylar
-metatag.details2=Dataylar 2
+metatag.details=Detaylar
+metatag.details2=Detaylar 2
 metatag.director=Yönetmen
 metatag.dvdepisode=DVD bölümü
 metatag.dvdorder=DVD sıralaması
@@ -513,6 +518,7 @@ metatag.guests=Konuk oyuncular
 metatag.images=Resimler
 metatag.imdb=IMDB Id
 metatag.internal=dahili
+metatag.language=Dil
 metatag.mediafiletype=Tür
 metatag.minutes=dk
 metatag.movie=Film
@@ -555,6 +561,7 @@ metatag.trailer=Fragman
 metatag.url=Url
 metatag.video=Video
 metatag.videocodec=Video kodlayıcı
+metatag.videobitrate=Video bit oranı
 metatag.watched=İzlenen
 metatag.writer=Yazar
 metatag.year=Yıl
@@ -708,9 +715,9 @@ Genres.WESTERN = Western
 
 ####################################
 # Scraper hints. Since scraper will be loaded dynamically, the texts resist here for now
-# scraper.tmdb.hint=<html><h3>The Movie Database (TMDb)</h3><br />The largest free movie database maintained by the community. It provides metadata and artwork<br />in many different languages. Thus it is the first choice for non english users<br /><br />Available languages\: multiple</html>
-# scraper.imdb.hint=<html><h3>Internet Movie Database (IMDB)</h3><br />The most used database for movies all over the world.<br />Does not contain plot/title/tagline in every language. You may choose to download these texts from TMDB<br /><br />Available languages\: multiple</html>
-# scraper.ofdb.hint=<html><h3>Online Filmdatenbank (OFDb)</h3><br />A german movie database driven by the community.<br /><br />Available languages\: DE</html>
-# scraper.zelluloid.hint=<html><h3>Zelluloid.de</h3><br />A german movie database.<br /><br />Available languages\: DE</html>
-# scraper.moviemeter.hint=<html><h3>Moviemeter.nl</h3><br />A dutch movie database.<br /><br />Available languages\: NL</html>
-# scraper.rottentomatoes.hint=<html><h3>Rotten Tomatoes</h3><br />An american movie database.<br />Does not provide plot for older films via the API.<br /><br />Available languages\: EN</html>
+scraper.tmdb.hint=<html><h3>The Movie Database (TMDb)</h3><br />En büyük ücretsiz film veritabanı. Bu veritabanı metadata ve artwork sağlar<br />Birçok farklı dildedir. Bu nedenle dili İngilizce olmayan kullanıcılar için tercih edilir.<br /><br />Kullanılabilir diller\: çoklu</html>
+scraper.imdb.hint=<html><h3>Internet Movie Database (IMDB)</h3><br />Tüm dünyada filmler için en çok kullanılan veritabanı.<br />Her dilde plot/title/tagline verisi içermez. Bunları indirmek için TMDB'yi tercih edebilirsiniz<br /><br />Kullanılabilir diller\: çoklu</html>\n\njavascript\:;
+scraper.ofdb.hint=<html><h3>Online Filmdatenbank (OFDb)</h3><br />Açık kaynak Alman film veritabanı.<br /><br />Kullanılabilir diller\: DE</html>
+scraper.zelluloid.hint=<html><h3>Zelluloid.de</h3><br />Alman film veritabanı.<br /><br />Kullanılabilir diller\: DE</html>
+scraper.moviemeter.hint=<html><h3>Moviemeter.nl</h3><br />Hollanda film veritabanı.<br /><br />Kullanılabilir diller\: NL</html>
+scraper.rottentomatoes.hint=<html><h3>Rotten Tomatoes</h3><br />Amerika film veritabanı.<br />Eski film verilerine API ile erişim sağlamaz.<br /><br />Kullanılabilir diller\: EN</html>
