--- a/locale/messages_zh.properties
+++ b/locale/messages_zh.properties
@@ -30,8 +30,8 @@ tmm.tvshow=电视剧
 tmm.settings=设置
 
 # menu actions
-# tmm.exit=Quit
-tmm.exit.runningtasks=确定关闭 tinyMediaManager ? 还有进程在运行中...\n
+tmm.exit=退出
+tmm.exit.runningtasks=确定关闭 tinyMediaManager ? 还有正在运行的进程...\n
 # tmm.exit.confirmation=Quit confirmation
 tmm.cache=缓存
 tmm.clearurlcache=清理 url 缓存
@@ -49,6 +49,7 @@ tmm.contact=联系我们
 tmm.donate=捐赠
 tmm.searchfield=搜索...
 tmm.errorlogs=错误日志
+# tmm.messages=Show message history
 tmm.wakeonlandevice=唤醒网络设备
 tmm.wakeonlan=网络唤醒
 tmm.version=版本
@@ -131,10 +132,12 @@ movie.findmissing=发现丢失的电影
 movie.assignmovieset=刮削系列电影信息
 movie.assignmovieset.desc=<html>将所选电影纳入指定电影系列中<br />该功能仅捐赠者可以使用</html>
 movie.setwatchedflag=设置已看标签
-# movie.synctrakt=Synchronize the movie collection with Trakt.tv
-# movie.synctrakt.desc=Synchronize the movie collection with Trakt.tv
-# movie.synctraktwatched=Synchronize the watched state with Trakt.tv
-# movie.synctraktwatched.desc=Synchronize the watched state with Trakt.tv
+# movie.synctrakt=Trakt.tv - Synchronize complete 'collection'
+# movie.synctrakt.desc=Adds all your local movies to your Trakt.tv collection, and syncs the 'date added'.
+# movie.synctraktwatched=Trakt.tv - Synchronize complete 'watched' state
+# movie.synctraktwatched.desc=Syncs all 'watched' states from Trakt.tv.
+# movie.synctrakt.selected=Trakt.tv - Synchronize selected movie(s) - 'collected' and 'watched'
+# movie.synctrakt.selected.desc=Syncs only the selected movie(s) with Trakt.tv. Collection and watched state.
 
 movie.export=导出电影列表
 
@@ -268,7 +271,6 @@ Settings.externaldevices=远程设备
 Settings.externalservices=远程服务器
 Settings.filetypes=文件类型
 Settings.trakttv=Trakt.tv
-Settings.trakttv.apikey=Trakt.tv API 密码
 
 # general settings
 Settings.proxy=代理服务器
@@ -350,6 +352,7 @@ Settings.multipleMovies=允许一个文件夹内包含多部电影
 Settings.multipleMovies.hint=小心：该选项将允许一个文件夹内存储多部电影。启用该功能将会导致文件重命名功能、其他剧照／缩略图功能失效。因此，建议不使用该功能。
 Settings.nfoFormat=NFO 格式
 Settings.nofFileNaming=NFO 文件名
+# Settings.nfo.discstyle=<html>VIDEO_TS / VIDEO_TS.nfo<br />BDMV / index.bdmv</html>
 Settings.videofiletypes=视频
 Settings.extrafiletypes=字幕及其他
 Settings.audiofiletypes=音频
@@ -456,10 +459,12 @@ tvshow.renamer.tvshowfolder=重命名电视剧文件夹
 tvshow.renamer.tvshowfolder.year=电视剧文件夹名加入出品年份
 tvshow.updatemediainfo=更新电视剧资料
 tvshow.export=导出电视剧列表
-# tvshow.synctrakt=Synchronize the TV show collection with Trakt.tv
-# tvshow.synctrakt.desc=Synchronize the TV show collection with Trakt.tv
-# tvshow.synctraktwatched=Synchronize the watched state with Trakt.tv
-# tvshow.synctraktwatched.desc=Synchronize the watched state with Trakt.tv
+# tvshow.synctrakt=Trakt.tv - Synchronize complete 'collection'
+# tvshow.synctrakt.desc=Adds all your local shows to your Trakt.tv collection, and syncs the 'date added'.
+# tvshow.synctraktwatched=Trakt.tv - Synchronize complete 'watched' state
+# tvshow.synctraktwatched.desc=Syncs all 'watched' states from Trakt.tv.
+# tvshow.synctrakt.selected=Trakt.tv - Synchronize selected TV show(s) - 'collected' and 'watched'
+# tvshow.synctrakt.selected.desc=Syncs only the selected TV show(s) with Trakt.tv. Collection and watched state.
 # tvshow.changetodvdorder=Change selected episode(s) to DVD order
 # tvshow.changefromdvdorder=Change selected episode(s) to aired order
 # tvshow.changeorder.desc=This should be used after import, before you scrape
@@ -513,6 +518,7 @@ metatag.guests=客串演出
 metatag.images=图片
 metatag.imdb=IMDB Id
 metatag.internal=内置
+# metatag.language=Language
 metatag.mediafiletype=类型
 metatag.minutes=分钟
 metatag.movie=电影
@@ -524,7 +530,7 @@ metatag.originaltitle=原名
 metatag.path=路径
 metatag.plot=剧情
 metatag.production=制片公司
-metatag.producers=制片人
+metatag.producers=制片
 metatag.premiered=首播
 metatag.quality=画质
 metatag.rating=评分
@@ -555,6 +561,7 @@ metatag.trailer=预告片
 metatag.url=Url 地址
 metatag.video=视频
 metatag.videocodec=视频
+# metatag.videobitrate=Video bitrate
 metatag.watched=看过
 metatag.writer=编剧
 metatag.year=年份
