--- a/locale/messages_es.properties
+++ b/locale/messages_es.properties
@@ -14,7 +14,7 @@ Button.edit=Editar
 Button.register=Registro
 Button.rename=Renombrar
 Button.chooseplayer=Elegir reproductor
-Button.update=Actualización
+Button.update=Actualizar
 
 menuitem.cut=Cortar
 menuitem.copy=Copiar
@@ -49,6 +49,7 @@ tmm.contact=Contacto
 tmm.donate=Donaciones
 tmm.searchfield=Buscar ...
 tmm.errorlogs=Mostrar reporte de error
+tmm.messages=Mostrar historial de mensajes
 tmm.wakeonlandevice=Despertar dispositivo LAN
 tmm.wakeonlan=Despertar dispositivo LAN
 tmm.version=Versión
@@ -103,25 +104,25 @@ update.mediainfo=Obtener Mediainfo
 edit.discard=Descartar cambios
 
 movie.scraping=Raspado películas
-movie.scrape.selected=Buscar y raspar película(s) seleccionada
-movie.scrape.selected.force=Buscar y raspar película(s) seleccionada - Forzar la mejor concordancia
-movie.scrape.selected.force.desc=Buscar y raspar película(s) seleccionada sin interacción del usuario - Forzar la mejor concordancia
-movie.scrape.unscraped=Buscar y raspar toda película(s) no raspada aún - Forzar la mejor concordancia
-movie.scrape.unscraped.desc=Buscar y raspar toda película(s) no raspada aún sin interacción del usuario - Forzar la mejor concordancia
-movie.scrape.metadata=Raspar metadatos para película(s) seleccionada
-movie.scrape.metadata.desc=Raspar metadatos para película(s) seleccionada
+movie.scrape.selected=Buscar y raspar película(s) seleccionada(s)
+movie.scrape.selected.force=Buscar y raspar película(s) seleccionada(s) - Forzar la mejor concordancia
+movie.scrape.selected.force.desc=Buscar y raspar película(s) seleccionada(s) sin interacción del usuario - Forzar la mejor concordancia
+movie.scrape.unscraped=Buscar y raspar todas las películas no raspadas aún - Forzar la mejor concordancia
+movie.scrape.unscraped.desc=Buscar y raspar todas las películas no raspadas aún sin interacción del usuario - Forzar la mejor concordancia
+movie.scrape.metadata=Raspar metadatos para película(s) seleccionada(s)
+movie.scrape.metadata.desc=Raspar metadatos para película(s) seleccionada(s)
 movie.scrape.nomatchfound=No encontramos la película adecuada durante la búsqueda
 movie.scrape.toosimilar=Los títulos son demasiado similares
 movie.scrape.toolowscore=El rango de coincidencia es demasiado bajo (<{}) por lo que no hemos tenido en cuenta este resultado
-movie.remove=Borrar película(s) seleccionada de tMM
+movie.remove=Borrar película(s) seleccionada(s) de tMM
 movie.delete=Eliminar película(s) seleccionada de tMM y de su origen de datos
 movie.delete.hint=Esta acción eliminara la película(s) seleccionada de tinyMediaManager y de su origen de datos\!
-movie.delete.desc=¿Esta seguro de querer eliminar la película(s) seleccionada de tinyMediaManager y de la fuente origen de datos? Los archivos serán temporalmente movidos a una carpeta llamada .deletedByTMM dentro de la carpeta origen de datos. Estos serán borrados al salir de tinyMediaManager
-movie.rename=Limpiar y renombrar película(s) seleccionada
+movie.delete.desc=¿Esta seguro de querer eliminar la película(s) seleccionada de tinyMediaManager y de la fuente origen de datos?\nLos archivos serán temporalmente movidos a una carpeta llamada .deletedByTMM dentro de la carpeta\norigen de datos. Estos serán borrados al salir de tinyMediaManager
+movie.rename=Limpiar y renombrar película(s) seleccionada(s)
 movie.renamepreview=Limpiar y renombrar la película(s) seleccionada - dry run
 movie.renamepreview.hint=<html>Crea una vista previa de las películas que tienen que ser renombradas <br /> Esta característica esta disponible solo para nuestros usuarios donantes</html>
 movie.renamerpreview=Renombrado (vista preliminar)
-movie.updatemediainfo=Actualizar información multimedía para película(s) seleccionada
+movie.updatemediainfo=Actualizar información multimedía para película(s) seleccionada(s)
 movie.bulkedit=Edición masiva
 movie.bulkedit.desc=Cambia la colección, etiquetas, géneros y marca de "visualizado" para todas las películas seleccionadas
 movie.rewritenfo=Reescribir el archivo NFO para la película(s) seleccionada
@@ -131,12 +132,14 @@ movie.findmissing=Encuentre las películas que faltan
 movie.assignmovieset=Encuentra una colección para la película(s) seleccionada
 movie.assignmovieset.desc=<html>Asigna película(s) seleccionada a su colección correspondiente<br />Esta característica esta disponible solo para nuestros usuarios donantes</html>
 movie.setwatchedflag=Señalar como vista esta película
-movie.synctrakt=Sincronizar colección de películas con Trakt.tv
-movie.synctrakt.desc=Sincronizar colección de películas con Trakt.tv
-movie.synctraktwatched=Sincronizar vistas con Trakt.tv
-movie.synctraktwatched.desc=Sincronizar vistas con Trakt.tv
+movie.synctrakt=Trakt.tv - Sincronizar 'colección' completa
+movie.synctrakt.desc=Añadir todas tus películas en local a la colección de Trakt.tv, y sincronizar la 'fecha de inserción'
+movie.synctraktwatched=Trakt.tv - Sincronizar todas las 'vistas'
+movie.synctraktwatched.desc=Sincronizar todas las 'vistas' con Trakt.tv
+movie.synctrakt.selected=Trakt.tv - Sincronizar película(s) seleccionada(s) - 'coleccionadas' y 'vistas'
+movie.synctrakt.selected.desc=Sincronizar sólo la(s) película(s) seleccionada(s) con Trakt.tv. Colecciones y vistas
 
-movie.export=Exportar datos para película(s) seleccionada
+movie.export=Exportar datos para película(s) seleccionada(s)
 
 movie.edit=Editar película
 movie.edit.abortqueue.desc=Cancelar la edición de todas las películas seleccionadas
@@ -188,8 +191,8 @@ scraper.artwork=Raspador Artwork
 scraper.trailer=Raspador Trailer
 
 image.choose=Seleccione una imagen
-# image.inserturl=Insert an url to an image here
-# image.downloadimage=Download image
+image.inserturl=URL a una imagen
+image.downloadimage=Descargar Imagen
 image.choose.file=Desde archivo
 image.choose.fanart=Seleccione un fanart
 image.choose.poster=Seleccione un póster
@@ -208,7 +211,7 @@ image.noneselected=No has seleccionado una imagen\!\!\!
 image.seteselected=Establecer imagen seleccionada
 image.download=Descargando imagen
 image.download.failed=No se ha podido descargar la imagen
-image.download.noid=No se encontro ID (imdbId o tmdbId) durante la busqueda
+image.download.noid=No se encontró ID (imdbId o tmdbId) durante la búsqueda
 image.download.progress=Descargando imágenes 
 image.download.nothingfound=No se han encontrado imágenes
 image.poster.size=Tamaño póster 
@@ -268,7 +271,6 @@ Settings.externaldevices=Dispositivos externos
 Settings.externalservices=Servicios externos
 Settings.filetypes=Tipos de archivos
 Settings.trakttv=Trakt.tv
-Settings.trakttv.apikey=Trakt.tv API key
 
 # general settings
 Settings.proxy=Ajustes proxy
@@ -297,10 +299,10 @@ Settings.trakt.clearmovies=Borrar películas de Trakt.tv
 Settings.trakt.clearmovies.hint=ATENCIÓN\: Esta acción borrara todas tus películas de tu perfil de Trakt.tv. ¿Deseas continuar?
 Settings.trakt.cleartvshows=Borrar programas TV de Trakt.tv
 Settings.trakt.cleartvshows.hint=ATENCIÓN\: Esta acción borrara todos tus programas TV de tu perfil de Trakt.tv. ¿Deseas continuar?
-# Settings.misc=Misc. settings
-# Settings.memoryborder=Memory settings
-# Settings.memory=Max. memory
-# Settings.memory.hint=Increase this value if you get OutOfMemoryError (Java heap space) or if you've got a large database and tinyMediaManager is running slow.\r\nBe aware\: this amount of memory has to be free whenever tinyMediaManager starts. Default 512MB\r\nChanging this value needs a restart of tinyMediaManager to take effect
+Settings.misc=Ajustes varios
+Settings.memoryborder=Ajustes de memoria
+Settings.memory=Memoria máx.
+Settings.memory.hint=Incrementa este valor si obtienes un OutOfMemoryError (Java heap space) o si tienes una base de datos muy grande y el tinyMediaManager va muy lento.\nTen en cuenta\: esta cantidad de memoria tiene que estar disponible cuando arranque tinyMediaManager. Por defecto 512MB\nAl cambiar este valor será necesario reiniciar el tinyMediaManager para que surja efecto.
 
 # image settings
 Settings.poster=Póster y fanart
@@ -350,6 +352,7 @@ Settings.multipleMovies=Permitir múltiples películas por carpeta
 Settings.multipleMovies.hint=ATENCIÓN\: Esta opción le permitirá importar varias películas contenidas en una misma carpeta.\nHabilitar esto hará que usted ya no pueda editar\nni utilizar extrafanart / extrathumbs de forma independientemente para cada una de las películas.\n\nNO SE RECOMIENDA TENER VARIAS PELÍCULAS EN UNA MISMA CARPETA\!\!\!
 Settings.nfoFormat=Adecuar el formato del archivo NFO a
 Settings.nofFileNaming=Nombre del archivo NFO
+Settings.nfo.discstyle=<html>VIDEO_TS / VIDEO_TS.nfo<br />BDMV / index.bdmv</html>
 Settings.videofiletypes=Tipos de archivos de vídeo
 Settings.extrafiletypes=Tipos de archivos de subtítulos
 Settings.audiofiletypes=Tipos de archivos de audio
@@ -358,8 +361,8 @@ Settings.sorting.info=Elija los artículos o prefijos que desea que no sean toma
 Settings.renamer=Renombrado
 Settings.renamer.folder=Nombre de carpeta
 Settings.renamer.file=Nombre de archivo
-# Settings.renamer.token=Token description
-# Settings.renamer.value=Value from the example
+Settings.renamer.token=Pequeña descripción
+Settings.renamer.value=Muestra del ejemplo
 Settings.renamer.asciireplacement=Reemplace los caracteres no ASCII por sus equivalentes ASCII básicos
 Settings.renamer.asciireplacement.hint=Ejemplos\: Ä \=> Ae; Ö \=> Oe; ß \=> ss; Á \= > A; Æ \=> Ae; ...
 Settings.cleanupoptions=Opciones de limpieza
@@ -377,55 +380,55 @@ Settings.trailer.preferred=Ajustes para Trailer
 Settings.trailer.source=Recurso  Trailer
 Settings.trailer.quality=Calidad Trailer
 
-# Settings.movie.renamer.title=Renamer pattern and options
-# Settings.movie.renamer.optional={} \= optional replacement\r\neg\: {Year $Y} -> "Year 2013" if $Y is not empty\r\nif $Y is empty (or no $x replacement inside) the complete tag is empty
+Settings.movie.renamer.title=Patrón y opciones del renombrado
+Settings.movie.renamer.optional={} \= reemplazo opcional\nej\: {Año $Y} -> "Año 2013" si $Y no está vacío\nsi $Y está vacío la etiqueta completa está vacía
 Settings.movie.renamer.example=Elija un patrón para el renombrado de carpetas y archivos.\nNota\: Si desea omitir el renombrado deje vacíos estos campos.
 Settings.movie.renamer.nomovie=NOTA\: Se necesita al menos una película para el ejemplo
 Settings.movie.renamer.spacesubstitution=Sustituir espacios por
 
-# Settings.movie.renamer.$T=Title
-# Settings.movie.renamer.$O=Original title
-# Settings.movie.renamer.$1=first letter of the title
-# Settings.movie.renamer.$E=Sort title
-# Settings.movie.renamer.$2=first letter of sort title
-# Settings.movie.renamer.$Y=Year
-# Settings.movie.renamer.$M=Movieset title (sort title)
-# Settings.movie.renamer.$N=Movieset title
-# Settings.movie.renamer.$I=IMDB number
-# Settings.movie.renamer.$C=Certification
-# Settings.movie.renamer.$G=First genre
-# Settings.movie.renamer.$L=Language
-# Settings.movie.renamer.$R=Video resolution
-# Settings.movie.renamer.$A=audio code + channels
-# Settings.movie.renamer.$V=video code + format
-# Settings.movie.renamer.$F=video format
-# Settings.movie.renamer.$S=media source (DVD etc)
-# Settings.movie.renamer.$3=3D tag (3D SBS/TAB)
+Settings.movie.renamer.$T=Título
+Settings.movie.renamer.$O=Título original
+Settings.movie.renamer.$1=primera letra del título
+Settings.movie.renamer.$E=Título corto
+Settings.movie.renamer.$2=primera letra del título corto
+Settings.movie.renamer.$Y=Año
+Settings.movie.renamer.$M=Título de la colección (título corto)
+Settings.movie.renamer.$N=Título de la colección
+Settings.movie.renamer.$I=número IMDB
+Settings.movie.renamer.$C=Certificación
+Settings.movie.renamer.$G=Primer género
+Settings.movie.renamer.$L=Idioma
+Settings.movie.renamer.$R=Resolución de vídeo
+Settings.movie.renamer.$A=códec de audio + canales
+Settings.movie.renamer.$V=códec de vídeo + formato
+Settings.movie.renamer.$F=formato de vídeo
+Settings.movie.renamer.$S=fuente de medios (DVD etc)
+Settings.movie.renamer.$3=etiqueta 3D (3D SBS/TAB)
 
-# Settings.tvshow.renamer.title=Renamer pattern and options
+Settings.tvshow.renamer.title=Patrón y opciones del renombrado
 
-# Settings.tvshow.renamer.$N=TV show name
-# Settings.tvshow.renamer.$Y=Year
-# Settings.tvshow.renamer.$T=Episode title
-# Settings.tvshow.renamer.$F=Video format
-# Settings.tvshow.renamer.$1=Season number
-# Settings.tvshow.renamer.$2=Season number with at least 2 digits
-# Settings.tvshow.renamer.$E=Episode number
-# Settings.tvshow.renamer.$R=Video resolution
-# Settings.tvshow.renamer.$A=audio code + channels
-# Settings.tvshow.renamer.$V=video code + format
-# Settings.tvshow.renamer.$F=Video format
+Settings.tvshow.renamer.$N=Nombre del programa de TV
+Settings.tvshow.renamer.$Y=Año
+Settings.tvshow.renamer.$T=Título del episodio
+Settings.tvshow.renamer.$F=Formato de vídeo
+Settings.tvshow.renamer.$1=Número de temporada
+Settings.tvshow.renamer.$2=Número de temporada con al menos 2 dígitos
+Settings.tvshow.renamer.$E=Número de episodio
+Settings.tvshow.renamer.$R=Resolución de vídeo
+Settings.tvshow.renamer.$A=códec de audio + canales
+Settings.tvshow.renamer.$V=códec de vídeo + formato
+Settings.tvshow.renamer.$F=Formato de vídeo
 
 
 # tv show settings
 Settings.tvshowdatasource=Origen de datos para programas TV
 Settings.tvshowdatasource.folderchooser=Añadir origen de datos para programas TV
 Settings.tvshowdatasource.remove.info=Si borra %s de entre sus recursos, todos los programas de TV y episodios que este contenga serán borrados de la base de datos de tMM.\n¿Estas seguro que deseas continuar?
-# Settings.dvdorder=Imported episodes are in DVD order
+Settings.dvdorder=Los episodios importados están ordenados como el DVD
 
-# Settings.tvshowfoldername=TV show folder name
-# Settings.tvshowseasonfoldername=Season folder name
-# Settings.tvshowfilename=Episode file name
+Settings.tvshowfoldername=Nombre de la carpeta del programa de TV
+Settings.tvshowseasonfoldername=Nombre de la carpeta de la temporada
+Settings.tvshowfilename=Nombre del archivo del episodio
 Settings.tvshowspacereplacement.hint=Remplazar los espacios por estos caracteres
 Settings.tvshow.certifactioncountry.hint=Nota\: Por el momento ninguno de los raspadores soporta calificación por edades para diferentes países.\nLa base de datos para programas de TV siempre devolverá los valores para USA.\nAniDB no soporta calificación por edades.\n
 
@@ -456,13 +459,15 @@ tvshow.renamer.tvshowfolder=Renombrar carpeta Programa TV
 tvshow.renamer.tvshowfolder.year=Añadir año a la carpeta Programa TV
 tvshow.updatemediainfo=Actualizar información multimedía para programa(s) TV/ episodio(s) seleccionado
 tvshow.export=Exportar programa(s) TV seleccionado
-tvshow.synctrakt=Sincronizar colección programas de televisión con Trakt.tv
-tvshow.synctrakt.desc=Sincronizar colección programas de televisión con Trakt.tv
-tvshow.synctraktwatched=Sincronizar películas vistas con Trakt.tv
-tvshow.synctraktwatched.desc=Sincronizar películas vistas con Trakt.tv
-# tvshow.changetodvdorder=Change selected episode(s) to DVD order
-# tvshow.changefromdvdorder=Change selected episode(s) to aired order
-# tvshow.changeorder.desc=This should be used after import, before you scrape
+tvshow.synctrakt=Trakt.tv - Sincronizar 'colección' completa
+tvshow.synctrakt.desc=Añadir todas tus series en local a la colección de Trakt.tv, y sincronizar la 'fecha de inserción'
+tvshow.synctraktwatched=Trakt.tv - Sincronizar todas las 'vistas'
+tvshow.synctraktwatched.desc=Sincronizar todas las 'vistas' con Trakt.tv
+tvshow.synctrakt.selected=Trakt.tv - Sincronizar serie(s) seleccionada(s) - 'coleccionadas' y 'vistas'
+tvshow.synctrakt.selected.desc=Sincronizar sólo la(s) serie(s) seleccionada(s) con Trakt.tv. Colecciones y vistas
+tvshow.changetodvdorder=Ordenar por el orden del DVD el/los episodio(s) seleccionado(s)
+tvshow.changefromdvdorder=Ordenar por fecha de emisión el/los episodio(s) seleccionado(s)
+tvshow.changeorder.desc=Esto se debe utilizar después de la importación, antes de raspar
 
 tvshowepisode.scrape=Raspar metadatos episodio
 tvshowepisode.scrape.withoutartwork=Raspar metadatos episodio (sin miniaturas)
@@ -498,9 +503,9 @@ metatag.dateadded=Momento en que fue añadido
 metatag.details=Detalles
 metatag.details2=Detalles 2
 metatag.director=Director
-# metatag.dvdepisode=DVD episode
-# metatag.dvdorder=DVD ordering
-# metatag.dvdseason=DVD season
+metatag.dvdepisode=Episodio DVD
+metatag.dvdorder=Ordenando DVD
+metatag.dvdseason=Temporada DVD
 metatag.episode=Episodio
 metatag.episodes=Episodios
 metatag.external=Externo
@@ -513,6 +518,7 @@ metatag.guests=Artistas invitados
 metatag.images=Imágenes
 metatag.imdb=IMDB Id
 metatag.internal=Interno
+metatag.language=Idioma
 metatag.mediafiletype=Tipo
 metatag.minutes=minutos
 metatag.movie=Película
@@ -555,6 +561,7 @@ metatag.trailer=Trailer
 metatag.url=Url
 metatag.video=Vídeo
 metatag.videocodec=Codec vídeo
+metatag.videobitrate=Bitrate de vídeo
 metatag.watched=Visualizado
 metatag.writer=Guionista
 metatag.year=Año
@@ -708,9 +715,9 @@ Genres.WESTERN = Oeste
 
 ####################################
 # Scraper hints. Since scraper will be loaded dynamically, the texts resist here for now
-# scraper.tmdb.hint=<html><h3>The Movie Database (TMDb)</h3><br />The largest free movie database maintained by the community. It provides metadata and artwork<br />in many different languages. Thus it is the first choice for non english users<br /><br />Available languages\: multiple</html>
-# scraper.imdb.hint=<html><h3>Internet Movie Database (IMDB)</h3><br />The most used database for movies all over the world.<br />Does not contain plot/title/tagline in every language. You may choose to download these texts from TMDB<br /><br />Available languages\: multiple</html>
-# scraper.ofdb.hint=<html><h3>Online Filmdatenbank (OFDb)</h3><br />A german movie database driven by the community.<br /><br />Available languages\: DE</html>
-# scraper.zelluloid.hint=<html><h3>Zelluloid.de</h3><br />A german movie database.<br /><br />Available languages\: DE</html>
-# scraper.moviemeter.hint=<html><h3>Moviemeter.nl</h3><br />A dutch movie database.<br /><br />Available languages\: NL</html>
-# scraper.rottentomatoes.hint=<html><h3>Rotten Tomatoes</h3><br />An american movie database.<br />Does not provide plot for older films via the API.<br /><br />Available languages\: EN</html>
+scraper.tmdb.hint=<html><h3>The Movie Database (TMDb)</h3><br /> Base de datos gratuita sobre películas más grande del mundo mantenida por la comunidad, Proporciona metadatos y artwork (posters, fanart, etc)<b r/>en muchos idiomas diferentes. Es la primera opción para usuarios de habla no inglesa<br /><br />Idiomas disponibles\: Múltiples Idiomas</html>
+scraper.imdb.hint=<html><h3>Internet Movie Database (IMDB)</h3><br />Base de datos sobre películas más popular de toda la red y del mundo.<br />No contiene plot/title/tagline en todos los idiomas. Tú debes descargar esos textos desde TMDB<br /><br />Idiomas disponibles\: Múltiples Idiomas </html>
+scraper.ofdb.hint=<html><h3>Online Filmdatenbank (OFDb)</h3><br />Base de datos en alemán gestionada por la comunidad.<br /><br />Idiomas disponibles\: Sólo Alemán</html>
+scraper.zelluloid.hint=<html><h3>Zelluloid.de</h3><br />Base de datos en Aléman.<br /><br />Idiomas disponibles\: Sólo Alemán</html>
+scraper.moviemeter.hint=<html><h3>Moviemeter.nl</h3><br />Base de datos sobre péliculas Holandesa.<br /><br />Idiomas disponibles\: Sólo Holandés</html>
+scraper.rottentomatoes.hint=<html><h3>Rotten Tomatoes</h3><br />Base de datos Americana sobre películas.<br />No proporciona plot para películas antiguas a través de la API.<br /><br />Idiomas disponibles\: Sólo Inglés</html>
