renamer: replace colons with dash 8instead of removing completely)

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+Upcoming version
+=======================
+x renamer: exchange colon with a dash. (even better than removing completely)
+
+
 Version 2.6.6
 =======================
 + updated trakt.tv library to the new API
